设置所有的org文件为utf-8

--- a/language.org
+++ b/language.org
@@ -1,87 +1,87 @@
-#+title: ÍâÓïÑ§Ï°
-#+author: ±È¿ËÂü
+#+title: å¤–è¯­å­¦ä¹ 
+#+author: æ¯”å…‹æ›¼
 #+latex_class: org-latex-pdf
 #+latex: \newpage
 
-* ¶ÌÓï
-- up to a point:Ò»¶¨³Ì¶ÈÉÏ,²»ÍêÈ«Èç´Ë,ÔÚÒ»¶¨³Ì¶ÈÉÏ;
-- no longer necessary:²»ÔÙÓĞ±ØÒª£»
-- apart from:Ô¶Àë£¬³ı¡­Ö®Íâ£»ÇÒ²»Ëµ£»È±ÉÙ
-- Effectively£ºÊµ¼ÊÉÏ£»
-- notwithstanding£ºËäÈ»£¬¾¡¹Ü£»
-- Authentication:ÈÏÖ¤£»
-- Authorization:ÊÚÈ¨£¬ÈÏ¿É£»Åú×¼£¬Î¯ÈÎ£»
-- Confidentiality£º±£ÃÜĞÔ£»
-- encryption£º¼ÓÃÜ£»
-- cipher£ºÃÜÂë£»
-- as well as :Ò²£»ºÍ¡­Ò»Ñù£»²»µ«¡­¶øÇÒ£»
-- vice versa:·´Ö®ÒàÈ»£»
-- every so often: ³£³££¬Å¼¶û£»
-# * ¹«Ë¾
+* çŸ­è¯­
+- up to a point:ä¸€å®šç¨‹åº¦ä¸Š,ä¸å®Œå…¨å¦‚æ­¤,åœ¨ä¸€å®šç¨‹åº¦ä¸Š;
+- no longer necessary:ä¸å†æœ‰å¿…è¦ï¼›
+- apart from:è¿œç¦»ï¼Œé™¤â€¦ä¹‹å¤–ï¼›ä¸”ä¸è¯´ï¼›ç¼ºå°‘
+- Effectivelyï¼šå®é™…ä¸Šï¼›
+- notwithstandingï¼šè™½ç„¶ï¼Œå°½ç®¡ï¼›
+- Authentication:è®¤è¯ï¼›
+- Authorization:æˆæƒï¼Œè®¤å¯ï¼›æ‰¹å‡†ï¼Œå§”ä»»ï¼›
+- Confidentialityï¼šä¿å¯†æ€§ï¼›
+- encryptionï¼šåŠ å¯†ï¼›
+- cipherï¼šå¯†ç ï¼›
+- as well as :ä¹Ÿï¼›å’Œâ€¦ä¸€æ ·ï¼›ä¸ä½†â€¦è€Œä¸”ï¼›
+- vice versa:åä¹‹äº¦ç„¶ï¼›
+- every so often: å¸¸å¸¸ï¼Œå¶å°”ï¼›
+# * å…¬å¸
 # ** nationz
 
 # ** codoon
-# *** ÈëÖ°
-# - µÇÂ½µØÖ·£ºhttp://exmail.qq.com/login
-# - ÕËºÅ£ºlixc@codoon.com
-# - ³õÊ¼ÃÜÂë£ºl123456£¨µÇÂ½ºó¸ü¸ÄÃÜÂë£©
-# - ¹²ÏíµØÖ·£º192.168.1.250
-# - ÕËºÅ£ºguest ÃÜÂë£ºcodoon.0123
-# - wifi ÃÜÂë£ºcodoon20140313
-# - ¹¾ßË QQ Èº£º115136492
-# - ÇëÔÚ°ìÀíÍêÈëÖ°ÊÖĞøºó×¼±¸ÒÔÏÂ×ÊÁÏ°ìÀíÔ°ÇøÒ»¿¨Í¨£¨¾Í²Í¿¨/Í£³µ¿¨£©
-#  + °ìÀíÊ±¼ä£ºÏÂÎç 14£º30-16:50
-#  + °ìÀíµØÖ·£ºD7 ¸ºÒ»²ãµÄÒ»¿¨Í¨³äÖµÖĞĞÄ£¨Ê³ÌÃÅÔ£©
-#  + °ìÀíÁ÷³Ì£ºĞ¯´ø¹¤×÷Ö¤Ã÷£¨Ç°Ì¨ÁìÈ¡£©+ Éí·İÖ¤£¨Ô­¼ş»ò¸´Ó¡¼ş£©+ ¹¤±¾·Ñ 25 Ôª£¨ÍË¿¨Ê±È«¶îÍË»¹£©¡£
-# - µÇÂ½¹«Ë¾ÓÊÏäÉèÖÃÇ©Ãûºó£¬ÇëµÚÒ»Ê±¼ä·¢Ò»·â×ÔÎÒ½éÉÜµÄÓÊ¼ş¸ø all£¨¹«Ë¾È«ÌåÔ±¹¤£©¡£
-# - ÓÊÏäÇ©Ãû¸ñÊ½£º\
-#     ¹¾ßËÍø www.codoon.com\\
-#     £Ø£Ø²¿ XXX 13800138000\\
-#     µç»°£º+86£¨28£©85980848\\
-#     ´«Õæ£º+86£¨28£©85980848-872\\
-#     µØÖ·£º³É¶¼ÊĞ¸ßĞÂÇøÌì¸®Èí¼şÔ°DÇø7¶°13²ã\\
-#     ÓÊ±à£º610041
-# - Çë½«Ãæ²¿ÇåÎúÉú»îÕÕÆ¬µç×ÓµµÒÔ¡°ĞÕÃû-²¿ÃÅ¡±µÄ·½Ê½ÃüÃû£¬²¢·¢ËÍÖÁÓÊÏä ganyx@codoon.com
-# - Ã¿ÔÂ5ÈÕÎª¹¤×Ê·¢·ÅÈÕ(Óö½Ú¼ÙÈÕÑÓ³Ù)£¬Èç¶ÔĞ½³ê·¢·ÅĞÅÏ¢ÓĞÒÉÎÊÇë±¾ÈËÔÚ¹¤×Ê·¢·Åºó5ÈÕÄÚÖÁ×ÛºÏ²¿¾­Àí´¦×ÉÑ¯£¬ÓâÆÚÊÓÎª¸öÈËÈ·ÈÏĞ½×ÊÎŞÒìÒé¡£
-# - ¹«Ë¾²»Ìá¹©ÆäËûÈÎºÎĞÎÊ½µÄ¸öÈËĞ½³ê·¢·ÅÍ¨Öª¡£
-# - ±¸×¢ĞÅÏ¢£º¹«Ë¾ÊµĞĞµ¯ĞÔ¹¤×÷¡££¨¼ÇµÃÒ»¶¨Ó¡¸öÊÖÓ¡Å¶£©
+# *** å…¥èŒ
+# - ç™»é™†åœ°å€ï¼šhttp://exmail.qq.com/login
+# - è´¦å·ï¼šlixc@codoon.com
+# - åˆå§‹å¯†ç ï¼šl123456ï¼ˆç™»é™†åæ›´æ”¹å¯†ç ï¼‰
+# - å…±äº«åœ°å€ï¼š192.168.1.250
+# - è´¦å·ï¼šguest å¯†ç ï¼šcodoon.0123
+# - wifi å¯†ç ï¼šcodoon20140313
+# - å’•å’š QQ ç¾¤ï¼š115136492
+# - è¯·åœ¨åŠç†å®Œå…¥èŒæ‰‹ç»­åå‡†å¤‡ä»¥ä¸‹èµ„æ–™åŠç†å›­åŒºä¸€å¡é€šï¼ˆå°±é¤å¡/åœè½¦å¡ï¼‰
+#  + åŠç†æ—¶é—´ï¼šä¸‹åˆ 14ï¼š30-16:50
+#  + åŠç†åœ°å€ï¼šD7 è´Ÿä¸€å±‚çš„ä¸€å¡é€šå……å€¼ä¸­å¿ƒï¼ˆé£Ÿå ‚æ—ï¼‰
+#  + åŠç†æµç¨‹ï¼šæºå¸¦å·¥ä½œè¯æ˜ï¼ˆå‰å°é¢†å–ï¼‰+ èº«ä»½è¯ï¼ˆåŸä»¶æˆ–å¤å°ä»¶ï¼‰+ å·¥æœ¬è´¹ 25 å…ƒï¼ˆé€€å¡æ—¶å…¨é¢é€€è¿˜ï¼‰ã€‚
+# - ç™»é™†å…¬å¸é‚®ç®±è®¾ç½®ç­¾ååï¼Œè¯·ç¬¬ä¸€æ—¶é—´å‘ä¸€å°è‡ªæˆ‘ä»‹ç»çš„é‚®ä»¶ç»™ allï¼ˆå…¬å¸å…¨ä½“å‘˜å·¥ï¼‰ã€‚
+# - é‚®ç®±ç­¾åæ ¼å¼ï¼š\
+#     å’•å’šç½‘ www.codoon.com\\
+#     ï¼¸ï¼¸éƒ¨ XXX 13800138000\\
+#     ç”µè¯ï¼š+86ï¼ˆ28ï¼‰85980848\\
+#     ä¼ çœŸï¼š+86ï¼ˆ28ï¼‰85980848-872\\
+#     åœ°å€ï¼šæˆéƒ½å¸‚é«˜æ–°åŒºå¤©åºœè½¯ä»¶å›­DåŒº7æ ‹13å±‚\\
+#     é‚®ç¼–ï¼š610041
+# - è¯·å°†é¢éƒ¨æ¸…æ™°ç”Ÿæ´»ç…§ç‰‡ç”µå­æ¡£ä»¥â€œå§“å-éƒ¨é—¨â€çš„æ–¹å¼å‘½åï¼Œå¹¶å‘é€è‡³é‚®ç®± ganyx@codoon.com
+# - æ¯æœˆ5æ—¥ä¸ºå·¥èµ„å‘æ”¾æ—¥(é‡èŠ‚å‡æ—¥å»¶è¿Ÿ)ï¼Œå¦‚å¯¹è–ªé…¬å‘æ”¾ä¿¡æ¯æœ‰ç–‘é—®è¯·æœ¬äººåœ¨å·¥èµ„å‘æ”¾å5æ—¥å†…è‡³ç»¼åˆéƒ¨ç»ç†å¤„å’¨è¯¢ï¼Œé€¾æœŸè§†ä¸ºä¸ªäººç¡®è®¤è–ªèµ„æ— å¼‚è®®ã€‚
+# - å…¬å¸ä¸æä¾›å…¶ä»–ä»»ä½•å½¢å¼çš„ä¸ªäººè–ªé…¬å‘æ”¾é€šçŸ¥ã€‚
+# - å¤‡æ³¨ä¿¡æ¯ï¼šå…¬å¸å®è¡Œå¼¹æ€§å·¥ä½œã€‚ï¼ˆè®°å¾—ä¸€å®šå°ä¸ªæ‰‹å°å“¦ï¼‰
 # - VPN:lixc O@MhHlRYu[x+-%z 123.1.154.31
-# - Ó²¼ş²¿Í¬ÊÂ×ùÎ»Èç±í\ref{tbl:hardware-department}ËùÊ¾
-# #+caption:  Ó²¼ş²¿Í¬ÊÂ
+# - ç¡¬ä»¶éƒ¨åŒäº‹åº§ä½å¦‚è¡¨\ref{tbl:hardware-department}æ‰€ç¤º
+# #+caption:  ç¡¬ä»¶éƒ¨åŒäº‹
 # #+label: tbl:hardware-department
 # #+attr_latex: :placement=[H]
 # |------+--------+--------+------+------|
-# | ÍòÀÚ | ÑîÕ¼¶° | ¸ßÓÀ»á | µË½¨ | Ô¬Êõ |
+# | ä¸‡ç£Š | æ¨å æ ‹ | é«˜æ°¸ä¼š | é‚“å»º | è¢æœ¯ |
 # |------+--------+--------+------+------|
-# |      | ÑîºèÒí | ÀîĞ¢³¬ | ³ÂË§ | ÂŞÇ¿ |
+# |      | æ¨é¸¿ç¿¼ | æå­è¶… | é™ˆå¸… | ç½—å¼º |
 # |------+--------+--------+------+------|
-# | ¶­½Ü |        |        |      |      |
+# | è‘£æ° |        |        |      |      |
 # |------+--------+--------+------+------|
-# | ²Ü·É |        |        |      |      |
+# | æ›¹é£ |        |        |      |      |
 # |------+--------+--------+------+------|
-# | Ã«Î° |        |        |      |      |
+# | æ¯›ä¼Ÿ |        |        |      |      |
 # |------+--------+--------+------+------|
-# ÈÏÊ¶µÄÈË
-# - android¿ª·¢£ºÍõÏé
-# - IOS¿ª·¢:ÀîÃ÷/ÕÅÔÄ
-# - Ç°¶Ë¿ª·¢£º¶Åº£±ó
-# - ºóÌ¨¿ª·¢£ºÔ¬Ïé
-# - ÊĞ³¡²¿£ºÕÅÁÖÃ¯
-# - ²úÆ·²¿£ºĞìÌìÏè/ÖìÁÕ
-# - ×ÛºÏ²¿£ºÄªÁÖ/ÔøÑ©Ù»/ÕÔÔÆÀ¼/³ÂÑïæÃ/ÂŞµ¤
-# - »á¼Æ£ºÕÔÔÂ
-# - ²É¹º£º²Ü·É
-# - ÔËÓª£ºÖÜö¦ö©
-# - Ëã·¨£ºÅíÀ×
-# - ²âÊÔ: ºØ¼Ì³É
+# è®¤è¯†çš„äºº
+# - androidå¼€å‘ï¼šç‹ç¥¥
+# - IOSå¼€å‘:ææ˜/å¼ é˜…
+# - å‰ç«¯å¼€å‘ï¼šæœæµ·æ–Œ
+# - åå°å¼€å‘ï¼šè¢ç¥¥
+# - å¸‚åœºéƒ¨ï¼šå¼ æ—èŒ‚
+# - äº§å“éƒ¨ï¼šå¾å¤©ç¿”/æœ±ç³
+# - ç»¼åˆéƒ¨ï¼šè«æ—/æ›¾é›ªå€©/èµµäº‘å…°/é™ˆæ‰¬å©·/ç½—ä¸¹
+# - ä¼šè®¡ï¼šèµµæœˆ
+# - é‡‡è´­ï¼šæ›¹é£
+# - è¿è¥ï¼šå‘¨é“é›¯
+# - ç®—æ³•ï¼šå½­é›·
+# - æµ‹è¯•: è´ºç»§æˆ
 
-# *** ÅÜ²½ºĞ×ÓV0.2
-# - ÕìÌı²ÉÓÃ74AHC08:µçÔ´µçÑ¹Vcc3.3v£¬ÊäÈëÖ§³Ö5v TTL, Êä³öËæVccÖ§³Ö3v CMOS
-# - ¿ØÖÆ²ÉÓÃ2Ñ¡1Ñ¡ÔñÆ÷£¬ĞÍºÅÔİ¶¨£»
+# *** è·‘æ­¥ç›’å­V0.2
+# - ä¾¦å¬é‡‡ç”¨74AHC08:ç”µæºç”µå‹Vcc3.3vï¼Œè¾“å…¥æ”¯æŒ5v TTL, è¾“å‡ºéšVccæ”¯æŒ3v CMOS
+# - æ§åˆ¶é‡‡ç”¨2é€‰1é€‰æ‹©å™¨ï¼Œå‹å·æš‚å®šï¼›
 
-# *** Ö÷°æ±¾
-# - Åä¼ş½çÃæ£ºFragmentFactory.java---->AccessoriesChooseActivity.java---->AccessoryManager.java---->
+# *** ä¸»ç‰ˆæœ¬
+# - é…ä»¶ç•Œé¢ï¼šFragmentFactory.java---->AccessoriesChooseActivity.java---->AccessoryManager.java---->
 #   BindAccessoryActivity.java---->DiscoveryAccessoryActivity.java---->SyncDeviceManager.java
-#   ---->BLEDeviceFactory.java--->CodoonProtocolBLE.java--->start()--->BaseAccessorySyncManager.java-->jar°ü
+#   ---->BLEDeviceFactory.java--->CodoonProtocolBLE.java--->start()--->BaseAccessorySyncManager.java-->jaråŒ…
 
 
