--- a/sitemap.org
+++ b/sitemap.org
@@ -1,13 +1,13 @@
 #+TITLE: Sitemap
 
-   + [[file:tool.org][2015-10-22 工具]]
-   + [[file:renovations.org][2015-10-10 装修日记]]
-   + [[file:index.org][2015-10-07 比克曼的知识管理]]
-   + [[file:software.org][2015-09-29 软件 ]]
-   + [[file:math.org][2015-09-23 数学 ]]
-   + [[file:protocol.org][2015-09-16 协议 ]]
-   + [[file:hardware.org][2015-09-09 硬件 ]]
-   + [[file:language.org][2015-09-09 外语学习]]
-   + [[file:encyclopedia.org][2015-09-09 百科知识]]
-   + [[file:system.org][2015-09-09 操作系统]]
-   + [[file:ml.org][2015-09-09 机器学习 ]]
+   + [[file:tool.org][2015-10-22 宸ュ叿]]
+   + [[file:system.org][2015-10-22 鎿嶄綔绯荤粺]]
+   + [[file:software.org][2015-10-22 杞欢 ]]
+   + [[file:renovations.org][2015-10-22 瑁呬慨鏃ヨ]]
+   + [[file:protocol.org][2015-10-22 鍗忚 ]]
+   + [[file:ml.org][2015-10-22 鏈哄櫒瀛︿範 ]]
+   + [[file:math.org][2015-10-22 鏁板 ]]
+   + [[file:language.org][2015-10-22 澶栬瀛︿範]]
+   + [[file:index.org][2015-10-22 姣斿厠鏇肩殑鐭ヨ瘑绠＄悊]]
+   + [[file:hardware.org][2015-10-22 纭欢 ]]
+   + [[file:encyclopedia.org][2015-10-22 鐧剧鐭ヨ瘑]]
