--- a/tool.org
+++ b/tool.org
@@ -1,76 +1,77 @@
-#+title: ¹¤¾ß
-#+author: ±È¿ËÂü
+#+title: å·¥å…·
+#+author: æ¯”å…‹æ›¼
 #+latex_class: org-latex-pdf 
 #+latex: \newpage 
 
 * emacs
-** °²×°
-- gnuserv°²×°£º½«emacsÄ¿Â¼¿½±´ºó£¬ÔÚÏµÍ³»·¾³±äÁ¿ÖĞÔö¼ÓHOME¼üÖµµÈÓÚemacsÂ·¾¶(d:\emacs)£¬¼´¿É£»
-** »ù±¾²Ù×÷
-- ÔÚeshellÖĞÊ¹ÓÃ$PATH$¿ÉÒÔÊä³öµ±Ç°emacsµÄÂ·¾¶path£»
-- ¼ÆËãÆ÷Ä£Ê½1£ºM-x calc½øÈë£¬ÊäÈë"10"»Ø³µ"d2£¬Õâ¸öd2»á°Ñ´°¿ÚÖĞµÄËùÓĞÊı×ÖÏÔÊ¾Îª¶ş½øÖÆĞÎÊ½£¬ËùÓĞµÄÊı×Ö¶¼»áÒÔ"2#"¿ªÍ·,ÒÔ±í
-  Ê¾ËüÃÇÊÇ¶ş½øÖÆĞÎÊ½¡£Èç¹ûÒªÖØĞÂÓÃÊ®½øÖÆÏÔÊ¾£¬ÔòÊäÈë"d0"¼´¿É£¬Í¬Ñù£¬Ò²¿ÉÒÔÓÃ"d8""£¬"d6"À´ÏÔÊ¾°Ë½øÖÆºÍÊ®Áù½øÖÆµÄ¸ñÊ½¡£Èç
-  ¹ûÒª½øĞĞ½øÖÆ×ª»»£¬±ÈÈç½²¶ş½øÖÆµÄ1010×ª»»ÎªÊ®Áù½øÖÆ£¬¿ÉÒÔÕâÑùÏÈd6Éè¶¨16½øÖÆÄ£Ê½£¬È»ºóÔÙminibufferÖĞÊäÈë2#1010£¬»Ø³µ£»
-- ¼ÆËãÆ÷Ä£Ê½2£ºM-x quick-calc½øÈë£¬Æô¶¯ºó»áÔÚminibufferÀïÌáÊ¾ÊäÈëÊıÑ§¼ÆËãÊ½£¬»Ø³µ¾ÍÏÔÊ¾½á¹û£»
-- ²éÑ¯µ±Ç°Ä£Ê½:C-h m»òÕßM-x describe-mode ;
-- µ¼ÈëÍ¼Æ¬¼ûÍ¼\ref{img-pic-test}:¿ÉÒÔÍ¨¹ıµ÷½Úwidth=.1\ linewidthÀ´ÏŞÖÆÍ¼Æ¬Êä³öµÄ´óĞ¡, ÆäÖĞ.1±íÊ¾±¶ÂÊ£¬»òÕßÊ¹ÓÃscale=0.2
-  ½øĞĞµ÷½Ú
-  #+caption: emacsµ¼Í¼²âÊÔ 
+** å®‰è£…
+- gnuservå®‰è£…ï¼šå°†emacsç›®å½•æ‹·è´åï¼Œåœ¨ç³»ç»Ÿç¯å¢ƒå˜é‡ä¸­å¢åŠ HOMEé”®å€¼ç­‰äºemacsè·¯å¾„(d:\emacs)ï¼Œå³å¯ï¼›
+** åŸºæœ¬æ“ä½œ
+- åœ¨eshellä¸­ä½¿ç”¨$PATH$å¯ä»¥è¾“å‡ºå½“å‰emacsçš„è·¯å¾„pathï¼›
+- è®¡ç®—å™¨æ¨¡å¼1ï¼šM-x calcè¿›å…¥ï¼Œè¾“å…¥"10"å›è½¦"d2ï¼Œè¿™ä¸ªd2ä¼šæŠŠçª—å£ä¸­çš„æ‰€æœ‰æ•°å­—æ˜¾ç¤ºä¸ºäºŒè¿›åˆ¶å½¢å¼ï¼Œæ‰€æœ‰çš„æ•°å­—éƒ½ä¼šä»¥"2#"å¼€å¤´,ä»¥è¡¨
+  ç¤ºå®ƒä»¬æ˜¯äºŒè¿›åˆ¶å½¢å¼ã€‚å¦‚æœè¦é‡æ–°ç”¨åè¿›åˆ¶æ˜¾ç¤ºï¼Œåˆ™è¾“å…¥"d0"å³å¯ï¼ŒåŒæ ·ï¼Œä¹Ÿå¯ä»¥ç”¨"d8""ï¼Œ"d6"æ¥æ˜¾ç¤ºå…«è¿›åˆ¶å’Œåå…­è¿›åˆ¶çš„æ ¼å¼ã€‚å¦‚
+  æœè¦è¿›è¡Œè¿›åˆ¶è½¬æ¢ï¼Œæ¯”å¦‚è®²äºŒè¿›åˆ¶çš„1010è½¬æ¢ä¸ºåå…­è¿›åˆ¶ï¼Œå¯ä»¥è¿™æ ·å…ˆd6è®¾å®š16è¿›åˆ¶æ¨¡å¼ï¼Œç„¶åå†minibufferä¸­è¾“å…¥2#1010ï¼Œå›è½¦ï¼›
+- è®¡ç®—å™¨æ¨¡å¼2ï¼šM-x quick-calcè¿›å…¥ï¼Œå¯åŠ¨åä¼šåœ¨minibufferé‡Œæç¤ºè¾“å…¥æ•°å­¦è®¡ç®—å¼ï¼Œå›è½¦å°±æ˜¾ç¤ºç»“æœï¼›
+- æŸ¥è¯¢å½“å‰æ¨¡å¼:C-h mæˆ–è€…M-x describe-mode ;
+- å¯¼å…¥å›¾ç‰‡è§å›¾\ref{img-pic-test}:å¯ä»¥é€šè¿‡è°ƒèŠ‚width=.1\ linewidthæ¥é™åˆ¶å›¾ç‰‡è¾“å‡ºçš„å¤§å°, å…¶ä¸­.1è¡¨ç¤ºå€ç‡ï¼Œæˆ–è€…ä½¿ç”¨scale=0.2
+  è¿›è¡Œè°ƒèŠ‚
+  #+caption: emacså¯¼å›¾æµ‹è¯• 
   #+label: img-pic-test
   #+attr_latex: placement=[H] scale=0.2
   [[./img/emacs1.jpg]]
-- ×ÖÌå£ºÊÔÊÔ *´ÖÌå* £¬ÊÔÊÔ /Ğ±Ìå/ ,  ÊÔÊÔÉ¾³ıÏß  +É¾³ıÏß+ £¬ÊÔÊÔ _ÏÂ»®Ïß_, ÊÔÊÔÏÂ±ê H_{2}O ÊÔÊÔÉÏ±ê E=mc^2 £¬µÈ¿í×ÖÌå =git=
-- elÔ´ÎÄ¼ş±àÒë:¶ÔÓÚemacsÄ³Ğ©°ü£¬ÓĞÉú³ÉµÄelcµÄ±àÒëÎÄ¼ş£¬emacsÆô¶¯Ê±£¬µ÷ÓÃelcÆô¶¯ËÙ¶È»á¸ü¿ì£¬µ«ÊÇÈç¹ûĞŞ¸ÄÁËÔ´ÎÄ¼şel£¬Ôò¿É
-  ÒÔÊ¹ÓÃM-x£ºbyte-recompile-directoryÀ´ÖØĞÂ±àÒë£¬²ÅÄÜ½«ĞŞ¸ÄµÄµØ·½Æğ×÷ÓÃ¡£±ÈÈçorg modeÖĞĞŞ¸ÄlatexµÄÉú³ÉÄ£Ê½º¯Êı
+- å­—ä½“ï¼šè¯•è¯• *ç²—ä½“* ï¼Œè¯•è¯• /æ–œä½“/ ,  è¯•è¯•åˆ é™¤çº¿  +åˆ é™¤çº¿+ ï¼Œè¯•è¯• _ä¸‹åˆ’çº¿_, è¯•è¯•ä¸‹æ ‡ H_{2}O è¯•è¯•ä¸Šæ ‡ E=mc^2 ï¼Œç­‰å®½å­—ä½“ =git=
+- elæºæ–‡ä»¶ç¼–è¯‘:å¯¹äºemacsæŸäº›åŒ…ï¼Œæœ‰ç”Ÿæˆçš„elcçš„ç¼–è¯‘æ–‡ä»¶ï¼Œemacså¯åŠ¨æ—¶ï¼Œè°ƒç”¨elcå¯åŠ¨é€Ÿåº¦ä¼šæ›´å¿«ï¼Œä½†æ˜¯å¦‚æœä¿®æ”¹äº†æºæ–‡ä»¶elï¼Œåˆ™å¯
+  ä»¥ä½¿ç”¨M-xï¼šbyte-recompile-directoryæ¥é‡æ–°ç¼–è¯‘ï¼Œæ‰èƒ½å°†ä¿®æ”¹çš„åœ°æ–¹èµ·ä½œç”¨ã€‚æ¯”å¦‚org modeä¸­ä¿®æ”¹latexçš„ç”Ÿæˆæ¨¡å¼å‡½æ•°
   org-export-latex-make-header
-- eshell ²é¿´ÏµÍ³×ÖÌå:eshell:fc-list(»òÕßfc-list.exe) (¿Õ¸ñ) :lang=zh-cn
-- ÉèÖÃ±àÂë¸ñÊ½:Ê¹ÓÃ¿ì½İ¼ü£ºC-x RET f È»ºó¿ÉÒÔÓÃ TAB ÏÔÊ¾ËùÓĞ´æÔÚµÄ±àÂë¡£Õâ¸öÃüÁî»á¸Ä±äÎÄ¼ş£¡Èç¹ûÖ»ÊÇ³öÏÖÂÒÂë£¬²¢ÇÒ²»Ïë¸Ä
-  ±äÎÄ¼ş±¾Éí£¬¿ÉÒÔÓÃÃüÁîC-x RET r ( M-x revert-buffer-with-coding-system)À´ÓÃÖ¸¶¨µÄ±àÂëÖØĞÂ¶ÁÈëÕâ¸öÎÄ¼ş¡£²»¸Ä±äµ±Ç°ÎÄ¼ş
-  ±àÂë£¬µ«½«¸ÃÎÄ¼şÁí´æÎªutf-8±àÂë¸ñÊ½£ºC-x RET c(M-x universal-coding-system-argument ) utf-8
-- ÓÒ¼ü²Ëµ¥ÅäÖÃ´ò¿ªÃüÁî£ºÔÚ×¢²á±í\HKEY\_CLASSES\_ROOT\AllFilesystemObjects\shell\ÏÂÃæĞÂ½¨Ò»ÏîEmacs£¬ÔÙÔÚÏÂÃæĞÂ½¨commandÏî£¬
-  ¿´ÆğÀ´Ó¦¸ÃÊÇÕâÑù£º\HKEY\_CLASSES\_ROOT\AllFilesystemObjects\shell\Emacs\command\ È»ºó°ÑcommandÏîÓÒ±ßµÄÄ¬ÈÏÖµÉèÎª
-  Path\gnuclientw.exe£¬²¢¼ÓÉÏ"%1"
-- emacsÅäÖÃÁ¢ÂíÉúĞ§: ¿ÉÒÔM-x eval-current-bufferÁ¢ÂíÉúĞ§;
-- ¶¨Òå×Ô¼ºµÄM-xÖ¸Áî£ºÈçÏÂÖ¸Áî½øĞĞM-x gtd£¬¿ÉÒÔ´ò¿ªÏàÓ¦µÄÎÄ¼ş£»
+- eshell æŸ¥çœ‹ç³»ç»Ÿå­—ä½“:eshell:fc-list(æˆ–è€…fc-list.exe) (ç©ºæ ¼) :lang=zh-cn
+- è®¾ç½®ç¼–ç æ ¼å¼:ä½¿ç”¨å¿«æ·é”®ï¼šC-x RET f ç„¶åå¯ä»¥ç”¨ TAB æ˜¾ç¤ºæ‰€æœ‰å­˜åœ¨çš„ç¼–ç ã€‚è¿™ä¸ªå‘½ä»¤ä¼šæ”¹å˜æ–‡ä»¶ï¼å¦‚æœåªæ˜¯å‡ºç°ä¹±ç ï¼Œå¹¶ä¸”ä¸æƒ³æ”¹
+  å˜æ–‡ä»¶æœ¬èº«ï¼Œå¯ä»¥ç”¨å‘½ä»¤C-x RET r ( M-x revert-buffer-with-coding-system)æ¥ç”¨æŒ‡å®šçš„ç¼–ç é‡æ–°è¯»å…¥è¿™ä¸ªæ–‡ä»¶ã€‚ä¸æ”¹å˜å½“å‰æ–‡ä»¶
+  ç¼–ç ï¼Œä½†å°†è¯¥æ–‡ä»¶å¦å­˜ä¸ºutf-8ç¼–ç æ ¼å¼ï¼šC-x RET c(M-x universal-coding-system-argument ) utf-8
+- å³é”®èœå•é…ç½®æ‰“å¼€å‘½ä»¤ï¼šåœ¨æ³¨å†Œè¡¨\HKEY\_CLASSES\_ROOT\AllFilesystemObjects\shell\ä¸‹é¢æ–°å»ºä¸€é¡¹Emacsï¼Œå†åœ¨ä¸‹é¢æ–°å»ºcommandé¡¹ï¼Œ
+  çœ‹èµ·æ¥åº”è¯¥æ˜¯è¿™æ ·ï¼š\HKEY\_CLASSES\_ROOT\AllFilesystemObjects\shell\Emacs\command\ ç„¶åæŠŠcommandé¡¹å³è¾¹çš„é»˜è®¤å€¼è®¾ä¸º
+  Path\gnuclientw.exeï¼Œå¹¶åŠ ä¸Š"%1"
+- emacsé…ç½®ç«‹é©¬ç”Ÿæ•ˆ: å¯ä»¥M-x eval-current-bufferç«‹é©¬ç”Ÿæ•ˆ;
+- å®šä¹‰è‡ªå·±çš„M-xæŒ‡ä»¤ï¼šå¦‚ä¸‹æŒ‡ä»¤è¿›è¡ŒM-x gtdï¼Œå¯ä»¥æ‰“å¼€ç›¸åº”çš„æ–‡ä»¶ï¼›
   #+begin_src lisp
    (defun gtd ()
     (interactive)
     (find-file "c:/homes/charles/gtd/gtd/mygtd.org"))
   #+end_src
-- ¶¨ÒåÄ£Ê½Ïà¹ØµÄ¿ì½İ¼ü£ºÈçÏÂ¶¨ÒåÒ»¸ö¿ì½İ¼ü£¬Ö»ÓĞÔÚorg-modeÖĞÆğ×÷ÓÃ
+- å®šä¹‰æ¨¡å¼ç›¸å…³çš„å¿«æ·é”®ï¼šå¦‚ä¸‹å®šä¹‰ä¸€ä¸ªå¿«æ·é”®ï¼Œåªæœ‰åœ¨org-modeä¸­èµ·ä½œç”¨
   #+begin_src lisp
   (define-key org-mode-map (kbd "C-S-a") 'org-archive-subtree)
   #+end_src
+- å¯¹äºorg-modeå¯¼å‡ºHTMLæ—¶ï¼Œå¦‚æœorg-modeæ˜¯gbk/utf-8ï¼Œåˆ™å¯¼å‡ºçš„HTMLä¹Ÿæ˜¯gbk/utf-8ï¼›
 ** org-mode
 # <<org-mode>>
-- ²åÈë¹«Ê½£º
-  1. ¹«Ê½£ºÔÚ±¾ĞĞ£¬$a^2+b^2=c^2$
-  2. ¹«Ê½£ºÔÚ±¾ĞĞ£¬\(a^2 + b^2 = c^2\)
-  3. ¹«Ê½£ºµ¥¶À³ÉĞĞ¡£$$a^2 + b^2 = c^2$$
-  4. ¹«Ê½£ºµ¥¶À³ÉĞĞ¡£\[a^2 + b^2 = c^2\]
-  5. ¹«Ê½£ºÔÚ±¾ĞĞ£¬\(\sqrt{2}\)
-  6. ºÍ¹«Ê½£º$$a=\sum_{i=0}^{n}a_{i}$$
-  7. ·ÖÊı¹«Ê½£º$$\frac{x}{y}$$
-- ±í¸ñ¼ÆËã£º
-  + ĞĞ±íÊ¾£ºµÚ2ĞĞ£º@2;
-  + ÁĞ±íÊ¾£ºµÚ2ÁĞ£º$2;
-  + ±í¸ñ±íÊ¾£ºµÚ2ĞĞµÚ2ÁĞ£º@2$2, »òÕßB2;
-  + ´ò¿ª±í¸ñ·ûºÅ°ïÖú£ºC-c ?;
-  + ÏÔÊ¾ĞĞÁĞ°ïÖú£ºC-c };
-  + ¹«Ê½ÒıÓÃ£ºÔÚ±í¸ñÏÂ·½µÄ¼ÆËã¹«Ê½ÉÏÊ¹ÓÃC-c C-c£¬»òÕßÔÚ±í¸ñÖĞÊ¹ÓÃC-u C-c *;
-  + ±í¸ñÖĞÊäÈë¼ÆËã¹«Ê½£ºÔÚ±í¸ñÖĞÊ¹ÓÃ=±íÊ¾ÁĞ¼ÆËã·½Ê½£¬Ê¹ÓÃ:=±í¸ñµ¥¸ö±í¸ñ¼ÆËã¹«Ê½£»
-  + ÔÚminibufferÖĞÊäÈë¹«Ê½£ºÁĞ¼ÆËãÄ£Ê½C-c =£¬±í¸ñ¼ÆËãÄ£Ê½C-u C-c = ;
-  + ÔÚµ¥¶ÀµÄbufferÖĞÊäÈë¹«Ê½£ºC-c ';
-  + ÇóÆ½¾ùÖµº¯Êıvmean:ÀıÈç:=vmean($2..$3)£»
-- org-mode×ª»»µ½pdfĞèÒªÔÚorg-modeÎÄ¼şÖĞÍ·²¿Ê¹ÓÃÈçÏÂÍ·;
+- æ’å…¥å…¬å¼ï¼š
+  1. å…¬å¼ï¼šåœ¨æœ¬è¡Œï¼Œ$a^2+b^2=c^2$
+  2. å…¬å¼ï¼šåœ¨æœ¬è¡Œï¼Œ\(a^2 + b^2 = c^2\)
+  3. å…¬å¼ï¼šå•ç‹¬æˆè¡Œã€‚$$a^2 + b^2 = c^2$$
+  4. å…¬å¼ï¼šå•ç‹¬æˆè¡Œã€‚\[a^2 + b^2 = c^2\]
+  5. å…¬å¼ï¼šåœ¨æœ¬è¡Œï¼Œ\(\sqrt{2}\)
+  6. å’Œå…¬å¼ï¼š$$a=\sum_{i=0}^{n}a_{i}$$
+  7. åˆ†æ•°å…¬å¼ï¼š$$\frac{x}{y}$$
+- è¡¨æ ¼è®¡ç®—ï¼š
+  + è¡Œè¡¨ç¤ºï¼šç¬¬2è¡Œï¼š@2;
+  + åˆ—è¡¨ç¤ºï¼šç¬¬2åˆ—ï¼š$2;
+  + è¡¨æ ¼è¡¨ç¤ºï¼šç¬¬2è¡Œç¬¬2åˆ—ï¼š@2$2, æˆ–è€…B2;
+  + æ‰“å¼€è¡¨æ ¼ç¬¦å·å¸®åŠ©ï¼šC-c ?;
+  + æ˜¾ç¤ºè¡Œåˆ—å¸®åŠ©ï¼šC-c };
+  + å…¬å¼å¼•ç”¨ï¼šåœ¨è¡¨æ ¼ä¸‹æ–¹çš„è®¡ç®—å…¬å¼ä¸Šä½¿ç”¨C-c C-cï¼Œæˆ–è€…åœ¨è¡¨æ ¼ä¸­ä½¿ç”¨C-u C-c *;
+  + è¡¨æ ¼ä¸­è¾“å…¥è®¡ç®—å…¬å¼ï¼šåœ¨è¡¨æ ¼ä¸­ä½¿ç”¨=è¡¨ç¤ºåˆ—è®¡ç®—æ–¹å¼ï¼Œä½¿ç”¨:=è¡¨æ ¼å•ä¸ªè¡¨æ ¼è®¡ç®—å…¬å¼ï¼›
+  + åœ¨minibufferä¸­è¾“å…¥å…¬å¼ï¼šåˆ—è®¡ç®—æ¨¡å¼C-c =ï¼Œè¡¨æ ¼è®¡ç®—æ¨¡å¼C-u C-c = ;
+  + åœ¨å•ç‹¬çš„bufferä¸­è¾“å…¥å…¬å¼ï¼šC-c ';
+  + æ±‚å¹³å‡å€¼å‡½æ•°vmean:ä¾‹å¦‚:=vmean($2..$3)ï¼›
+- org-modeè½¬æ¢åˆ°pdféœ€è¦åœ¨org-modeæ–‡ä»¶ä¸­å¤´éƒ¨ä½¿ç”¨å¦‚ä¸‹å¤´;
   #+begin_src emacs-lisp
-    #+title: ÎÒµÄ¼ÇÊÂ±¾
+    #+title: æˆ‘çš„è®°äº‹æœ¬
     #+author: lxc
     #+ latex_class: org-latex-pdf
     #+ latex: \newpage
   #+end_src
-- »­Í¼²âÊÔ£ºÈç¹ûÒªÖ§³ÖÖĞÎÄ£¬orgÎÄµµĞèÎªutf-8µÄ¸ñÊ½£¬ÕâÊÇjavaµ÷ÓÃditaa.jarÊ±µÄÄ¬ÈÏ¸ñÊ½, Ğ§¹ûÈçÍ¼\ref{img-test}ËùÊ¾
-  #+caption: ²âÊÔ»­Í¼
+- ç”»å›¾æµ‹è¯•ï¼šå¦‚æœè¦æ”¯æŒä¸­æ–‡ï¼Œorgæ–‡æ¡£éœ€ä¸ºutf-8çš„æ ¼å¼ï¼Œè¿™æ˜¯javaè°ƒç”¨ditaa.jaræ—¶çš„é»˜è®¤æ ¼å¼, æ•ˆæœå¦‚å›¾\ref{img-test}æ‰€ç¤º
+  #+caption: æµ‹è¯•ç”»å›¾
   #+label: img-test
   #+attr_latex: placement=[H] scale=0.3
   #+begin_src ditaa :file ./img/img-zhongwen.png :cmdline -r -o
@@ -88,8 +89,8 @@
                                                    +--------------+
   #+end_src
 
-- ²åÈëgnuplotÍ¼Æ¬£¬¼ûÍ¼\ref{img-gnuplot-test}ËùÊ¾£º
-  #+caption: ²âÊÔÍ¼
+- æ’å…¥gnuplotå›¾ç‰‡ï¼Œè§å›¾\ref{img-gnuplot-test}æ‰€ç¤ºï¼š
+  #+caption: æµ‹è¯•å›¾
   #+label: img-gnuplot-test
   #+attr_latex: placement=[H] scale=0.5
   #+begin_src gnuplot :exports results :file e:/OneDrive/my-learn/img/img-gnuplot-test.png
@@ -107,70 +108,70 @@
   plot f(x) w lp lw 1, g(x) w p lw 2, h(x) w l lw 3
   #+end_src
 
-- ÓÉÓÚorgÎÄµµ×ª»»ÎªlatexÎÄ±¾Ê±£¬ÖĞ¼äĞèÒªÈí¼şiconv½«Ö®×ª»»Îªutf-8¸ñÊ½£¬¶øorgÔ´ÎÄµµÊÇgbk¸ñÊ½£¬ËùÒÔÈç¹û½«orgÎÄµµÓÉgbk¸ñÊ½×ª
-  »»ÎªÁË±ğµÄ¸ñÊ½£¬±ÈÈçutf-8£¬ÔòĞèÒªĞŞ¸ÄiconvµÄ×ª»»ÃüÁî£¬ÏêÏ¸¼ûorg¸öÅäÖÃÎÄµµ¡°my-org-mode.el¡±
-- Èç¹ûĞèÒªĞŞ¸ÄorgÎÄµµÖĞÇ¶ÈëµÄ´úÂë¿í¶È¸ß¶È£¬¿ÉÒÔĞŞ¸Ä"my-org-mode.el"ÖĞµÄÈçÏÂ´úÂë"Ò³±ß¾à"
+- ç”±äºorgæ–‡æ¡£è½¬æ¢ä¸ºlatexæ–‡æœ¬æ—¶ï¼Œä¸­é—´éœ€è¦è½¯ä»¶iconvå°†ä¹‹è½¬æ¢ä¸ºutf-8æ ¼å¼ï¼Œè€Œorgæºæ–‡æ¡£æ˜¯gbkæ ¼å¼ï¼Œæ‰€ä»¥å¦‚æœå°†orgæ–‡æ¡£ç”±gbkæ ¼å¼è½¬
+  æ¢ä¸ºäº†åˆ«çš„æ ¼å¼ï¼Œæ¯”å¦‚utf-8ï¼Œåˆ™éœ€è¦ä¿®æ”¹iconvçš„è½¬æ¢å‘½ä»¤ï¼Œè¯¦ç»†è§orgä¸ªé…ç½®æ–‡æ¡£â€œmy-org-mode.elâ€
+- å¦‚æœéœ€è¦ä¿®æ”¹orgæ–‡æ¡£ä¸­åµŒå…¥çš„ä»£ç å®½åº¦é«˜åº¦ï¼Œå¯ä»¥ä¿®æ”¹"my-org-mode.el"ä¸­çš„å¦‚ä¸‹ä»£ç "é¡µè¾¹è·"
 #+begin_src emacs-lisp
-	\lstset{numbers=left, %ÉèÖÃĞĞºÅÎ»ÖÃ
-          numberstyle=\\tiny, %ÉèÖÃĞĞºÅ´óĞ¡
-	 		keywordstyle=\\color{blue}, %ÉèÖÃ¹Ø¼ü×ÖÑÕÉ«
-	 		commentstyle=\\color[cmyk]{1,0,1,0}, %ÉèÖÃ×¢ÊÍÑÕÉ«
-	        frame=single, %ÉèÖÃ±ß¿ò¸ñÊ½
-	        escapeinside=``, %ÌÓÒİ×Ö·û(1×óÃæµÄ¼ü)£¬ÓÃÓÚÏÔÊ¾ÖĞÎÄ
-	        breaklines, %×Ô¶¯ÕÛĞĞ
-	        extendedchars=false, %½â¾ö´úÂë¿çÒ³Ê±,ÕÂ½Ú±êÌâ£¬Ò³Ã¼ºº×Ö²»ÏÔÊ¾
-	        xleftmargin=10em,xrightmargin=5em, aboveskip=0.5em, %ÉèÖÃÒ³±ß¾à
-	        tabsize=4, %ÉèÖÃtab¿Õ¸ñÊı
-	        showspaces=false} %²»ÏÔÊ¾¿Õ¸ñ
+	\lstset{numbers=left, %è®¾ç½®è¡Œå·ä½ç½®
+          numberstyle=\\tiny, %è®¾ç½®è¡Œå·å¤§å°
+	 		keywordstyle=\\color{blue}, %è®¾ç½®å…³é”®å­—é¢œè‰²
+	 		commentstyle=\\color[cmyk]{1,0,1,0}, %è®¾ç½®æ³¨é‡Šé¢œè‰²
+	        frame=single, %è®¾ç½®è¾¹æ¡†æ ¼å¼
+	        escapeinside=``, %é€ƒé€¸å­—ç¬¦(1å·¦é¢çš„é”®)ï¼Œç”¨äºæ˜¾ç¤ºä¸­æ–‡
+	        breaklines, %è‡ªåŠ¨æŠ˜è¡Œ
+	        extendedchars=false, %è§£å†³ä»£ç è·¨é¡µæ—¶,ç« èŠ‚æ ‡é¢˜ï¼Œé¡µçœ‰æ±‰å­—ä¸æ˜¾ç¤º
+	        xleftmargin=10em,xrightmargin=5em, aboveskip=0.5em, %è®¾ç½®é¡µè¾¹è·
+	        tabsize=4, %è®¾ç½®tabç©ºæ ¼æ•°
+	        showspaces=false} %ä¸æ˜¾ç¤ºç©ºæ ¼
 #+end_src
-- ÄÚ²¿Á´½Ó£ºÖ»ĞèÒªÔÚÄ³¸öĞèÒªÁ´½Óµ½µÄµØ·½Ê¹ÓÃ# <<target>>£¬ÉèÖÃÒ»¸ö±êµã£¬ÔÙÔÚÊ¹ÓÃµÄµØ·½£¬Ê¹ÓÃÏñ[[][]]ÕâÑùµÄ¸ñÊ½È¥¶¨Î»±êµã£¬
-  ²¢¸ø³öÃèÊö·û£¬»òÕßÖ±½ÓÊ¹ÓÃ¿ì½İ¼üC-c C-lÌí¼Ó¸Ãµã£¬±ÈÈçÒÑ¾­ÔÚorg-mode±êÌâ´¦ÉèÖÃÁË±êµã£¬È»ºóÊ¹ÓÃ[[][]] ¶¨Î»¹ıÈ¥¾ÍÊÇ
-  [[org-mode]], ²¢ÇÒ¿ÉÒÔÊ¹ÓÃC-c &·µ»ØÀ´¡£
-- ±í¸ñ£º¿ÉÒÔÊ¹ÓÃtable-mode£¬ÃüÁîtable-insert¿ÉÒÔ²åÈëÒ»¸önĞĞnÁĞµÄ±í¸ñ£¬table-span-cell¿ÉÒÔºÏ²¢µ¥Ôª¸ñ¡£
+- å†…éƒ¨é“¾æ¥ï¼šåªéœ€è¦åœ¨æŸä¸ªéœ€è¦é“¾æ¥åˆ°çš„åœ°æ–¹ä½¿ç”¨# <<target>>ï¼Œè®¾ç½®ä¸€ä¸ªæ ‡ç‚¹ï¼Œå†åœ¨ä½¿ç”¨çš„åœ°æ–¹ï¼Œä½¿ç”¨åƒ[[][]]è¿™æ ·çš„æ ¼å¼å»å®šä½æ ‡ç‚¹ï¼Œ
+  å¹¶ç»™å‡ºæè¿°ç¬¦ï¼Œæˆ–è€…ç›´æ¥ä½¿ç”¨å¿«æ·é”®C-c C-læ·»åŠ è¯¥ç‚¹ï¼Œæ¯”å¦‚å·²ç»åœ¨org-modeæ ‡é¢˜å¤„è®¾ç½®äº†æ ‡ç‚¹ï¼Œç„¶åä½¿ç”¨[[][]] å®šä½è¿‡å»å°±æ˜¯
+  [[org-mode]], å¹¶ä¸”å¯ä»¥ä½¿ç”¨C-c &è¿”å›æ¥ã€‚
+- è¡¨æ ¼ï¼šå¯ä»¥ä½¿ç”¨table-modeï¼Œå‘½ä»¤table-insertå¯ä»¥æ’å…¥ä¸€ä¸ªnè¡Œnåˆ—çš„è¡¨æ ¼ï¼Œtable-span-cellå¯ä»¥åˆå¹¶å•å…ƒæ ¼ã€‚
 ** python-mode
-- ½øÈë½»»¥pythonÄ£Ê½£º½øÈëÄ³¸öbuffer£¬M-x python-mode£¬È»ºóC-c C-z¼´¿É½øÈë½»»¥Ä£Ê½£¬Ò²¿ÉÒÔÔÚbufferÀïÃæĞ´ºÃ³ÌĞò£¬ÔÚC-c
-  C-zÖ±½ÓÔËĞĞbufferµÄ´úÂë£»
+- è¿›å…¥äº¤äº’pythonæ¨¡å¼ï¼šè¿›å…¥æŸä¸ªbufferï¼ŒM-x python-modeï¼Œç„¶åC-c C-zå³å¯è¿›å…¥äº¤äº’æ¨¡å¼ï¼Œä¹Ÿå¯ä»¥åœ¨bufferé‡Œé¢å†™å¥½ç¨‹åºï¼Œåœ¨C-c
+  C-zç›´æ¥è¿è¡Œbufferçš„ä»£ç ï¼›
 * latex
-** ·½·¨
-# - ¹Ì¶¨latex²åÈëµÄÍ¼Æ¬Î»ÖÃ
+** æ–¹æ³•
+# - å›ºå®šlatexæ’å…¥çš„å›¾ç‰‡ä½ç½®
 #   #+begin_src latex
-#     \subsubsection{\kai{metisµÄÊı¾İÁ÷Í¼}}
-#     \begin{figure}[H]%×¢ÒâÊÇ´óĞ´µÄHÅ¶
+#     \subsubsection{\kai{metisçš„æ•°æ®æµå›¾}}
+#     \begin{figure}[H]%æ³¨æ„æ˜¯å¤§å†™çš„Hå“¦
 #         \centering
 #         \includegraphics[width=1.2\textwidth]{eps/metis_dataflow.eps}
 #         \caption{metis dataflow}
 #         \label{metis_dataflaw}
 #     \end{figure}
 #   #+end_src
-** ·ûºÅ
-*** ÌØÊâ·ûºÅ
+** ç¬¦å·
+*** ç‰¹æ®Šç¬¦å·
 |-------------------+-------------------+-----------------------+------------------------+-------------------|
-| ¶¥²¿ºáÏß          | µ×²¿ºáÏß          | ¶¥²¿×ó¼ıÍ·            | ¶¥²¿ÓÒ¼ıÍ·             | ¶¥²¿²¨ÀËºÅ        |
+| é¡¶éƒ¨æ¨ªçº¿          | åº•éƒ¨æ¨ªçº¿          | é¡¶éƒ¨å·¦ç®­å¤´            | é¡¶éƒ¨å³ç®­å¤´             | é¡¶éƒ¨æ³¢æµªå·        |
 | $\overline{abc}$  | $\underline{abc}$ | $\overleftarrow{abc}$ | $\overrightarrow{abc}$ | $\widetilde{abc}$ |
 |-------------------+-------------------+-----------------------+------------------------+-------------------|
-| ¶¥²¿¼âºÅ          | ¶¥²¿´óÀ¨ºÅÏòÉÏ    | µ×²¿´óÀ¨ºÅÏòÏÂ        | ¸ùºÅ                   | n´Î·½¸ùºÅ         |
+| é¡¶éƒ¨å°–å·          | é¡¶éƒ¨å¤§æ‹¬å·å‘ä¸Š    | åº•éƒ¨å¤§æ‹¬å·å‘ä¸‹        | æ ¹å·                   | næ¬¡æ–¹æ ¹å·         |
 | $\widehat{abc}$   | $\overbrace{abc}$ | $\underbrace{abc}$    | $\sqrt{abc}$           | $\sqrt[n]{abc}$   |
 |-------------------+-------------------+-----------------------+------------------------+-------------------|
-| ·ÖÊıºÅ            | ÎŞ                | ÎŞ                    | ÎŞ                     | ÎŞ                |
-| $\frac{abc}{xyz}$ | ÎŞ                | ÎŞ                    | ÎŞ                     | ÎŞ                |
+| åˆ†æ•°å·            | æ—                 | æ—                     | æ—                      | æ—                 |
+| $\frac{abc}{xyz}$ | æ—                 | æ—                     | æ—                      | æ—                 |
 |-------------------+-------------------+-----------------------+------------------------+-------------------|
-*** ´óĞ´µÄÏ£À°×ÖÄ¸
+*** å¤§å†™çš„å¸Œè…Šå­—æ¯
 |--------+---------+----------+--------|
 | \Gamma | \Lambda | \Sigma   | \Psi   |
 |--------+---------+----------+--------|
 | \Delta | \Xi     | \Upsilon | \Omega |
 |--------+---------+----------+--------|
-| \Theta | \Pi     | \Phi     | ÎŞ     |
+| \Theta | \Pi     | \Phi     | æ—      |
 |--------+---------+----------+--------|
-*** Ï£À°×ÖÄ¸
+*** å¸Œè…Šå­—æ¯
 |--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
 | \alpha | \beta     | \gamma  | \delta   | \epsilon | \varepsilon | \zeta | \eta   | \theta | \vartheta |
 |--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
 | \iota  | \kappa    | \lambda | \mu      | \nu      | \xi         | \pi   | \varpi | \rho   | \varrho   |
 |--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
-| \sigma | \varsigma | \tau    | \upsilon | \phi     | \varphi     | \chi  | \psi   | \omega | ÎŞ        |
+| \sigma | \varsigma | \tau    | \upsilon | \phi     | \varphi     | \chi  | \psi   | \omega | æ—         |
 |--------+-----------+---------+----------+----------+-------------+-------+--------+--------+-----------|
-*** ¼ıÍ··ûºÅ
+*** ç®­å¤´ç¬¦å·
 |--------------------+---------------------|
 | \leftarrow         | \longleftarrow      |
 |--------------------+---------------------|
@@ -204,7 +205,7 @@
 |--------------------+---------------------|
 | \swarrow           | \searrow            |
 |--------------------+---------------------|
-*** ¶ş½øÖÆ·ûºÅ
+*** äºŒè¿›åˆ¶ç¬¦å·
 |---------+-----------+------------------|
 | \pm     | \cap      | \diamond         |
 |---------+-----------+------------------|
@@ -230,7 +231,7 @@
 |---------+-----------+------------------|
 | \dagger | \ddagger  | \amalg           |
 |---------+-----------+------------------|
-*** ¹ØÏµ·ûºÅ
+*** å…³ç³»ç¬¦å·
 |-------------+-------------+-----------|
 | \leq        | \geq        | \equiv    |
 |-------------+-------------+-----------|
@@ -254,9 +255,9 @@
 |-------------+-------------+-----------|
 | \bowtie     | \Join       | \smile    |
 |-------------+-------------+-----------|
-| \frown      | \propto     | ÎŞ        |
+| \frown      | \propto     | æ—         |
 |-------------+-------------+-----------|
-*** ·Ö¸î·ûºÅ
+*** åˆ†å‰²ç¬¦å·
 |------------+------------------------|
 | \lfloor    | \rfloor                |
 |------------+------------------------|
@@ -264,9 +265,9 @@
 |------------+------------------------|
 | \langle    | \rangle                |
 |------------+------------------------|
-| \backslash | Ë«ÊúÏßÎªÒ»¸öĞ±¸ÜºÍÊúÏß |
+| \backslash | åŒç«–çº¿ä¸ºä¸€ä¸ªæ–œæ å’Œç«–çº¿ |
 |------------+------------------------|
-*** ÔÓÏî·ûºÅ
+*** æ‚é¡¹ç¬¦å·
 |--------------+------------+------------|
 | \dag         | \S         | \copyright |
 |--------------+------------+------------|
@@ -297,7 +298,7 @@
 | \diamondsuit | \heartsuit | \spadesuit |
 |--------------+------------+------------|
 
-*** ´óĞ¡¿É±ä·ûºÅ
+*** å¤§å°å¯å˜ç¬¦å·
 |---------+-----------+------------|
 | \sum    | \bigcap   | \bigodot   |
 |---------+-----------+------------|
@@ -307,9 +308,9 @@
 |---------+-----------+------------|
 | \int    | \bigvee   | \biguplus  |
 |---------+-----------+------------|
-| \oint   | \bigwedge | ÎŞ         |
+| \oint   | \bigwedge | æ—          |
 |---------+-----------+------------|
-*** Log·ûºÅ
+*** Logç¬¦å·
 |---------+-------+------+------+---------+---------+------+-------|
 | \arccos | \cos  | \csc | \exp | \ker    | \limsup | \min | \sinh |
 |---------+-------+------+------+---------+---------+------+-------|
@@ -320,9 +321,9 @@
 | \arg    | \coth | \dim | \inf | \liminf | \max    | \sin | \tanh |
 |---------+-------+------+------+---------+---------+------+-------|
 * keil
-- ÉèÖÃemacs±à¼­Æ÷£ºÔÚCustomer Tools Menu²Ëµ¥ÖĞ£¬CommandÉèÖÃemacsÂ·¾¶£¬ÔÚArgumentÖĞ!E´ú±í±à¼­µ±Ç°ÎÄ¼ş£»ÔÚMenu ContentÖĞĞÂ
-  ½¨¸öÃüÁîemacs(&E), À¨ºÅÀïÃæµÄ´ú±í¿ì½İ¼ü.
+- è®¾ç½®emacsç¼–è¾‘å™¨ï¼šåœ¨Customer Tools Menuèœå•ä¸­ï¼ŒCommandè®¾ç½®emacsè·¯å¾„ï¼Œåœ¨Argumentä¸­!Eä»£è¡¨ç¼–è¾‘å½“å‰æ–‡ä»¶ï¼›åœ¨Menu Contentä¸­æ–°
+  å»ºä¸ªå‘½ä»¤emacs(&E), æ‹¬å·é‡Œé¢çš„ä»£è¡¨å¿«æ·é”®.
 * iar
-- ÉèÖÃemacs±à¼­Æ÷£ºÔÚConfigure ToolÖĞMenu ContentÖĞĞÂ½¨¸öÃüÁîemacs(&E), À¨ºÅÀïÃæµÄ´ú±í¿ì½İ¼ü£¬ÔÚCommandÖĞÉèÖÃemacsÂ·¾¶£¬
-  ÔÚArgumentÖĞ \$FILE_PATH\$ ´ú±í±à¼­µ±Ç°ÎÄ¼ş.   
+- è®¾ç½®emacsç¼–è¾‘å™¨ï¼šåœ¨Configure Toolä¸­Menu Contentä¸­æ–°å»ºä¸ªå‘½ä»¤emacs(&E), æ‹¬å·é‡Œé¢çš„ä»£è¡¨å¿«æ·é”®ï¼Œåœ¨Commandä¸­è®¾ç½®emacsè·¯å¾„ï¼Œ
+  åœ¨Argumentä¸­ \$FILE_PATH\$ ä»£è¡¨ç¼–è¾‘å½“å‰æ–‡ä»¶.   
 
