--- a/math.org
+++ b/math.org
@@ -1,29 +1,29 @@
-#+title: ÊýÑ§ 
-#+author: ±È¿ËÂü
+#+title: æ•°å­¦ 
+#+author: æ¯”å…‹æ›¼
 #+latex_class: org-latex-pdf 
 #+latex: \newpage 
 
-* ´úÊý
-** ¸ÅÄî
-- ×ÔÈ»Êý£ºnatural number£¬{0£¬1£¬2£¬3...}µÈÈ«Ìå·Ç¸ºÕûÊý×é³ÉµÄÊýµÄ¼¯ºÏ³ÆÎª×ÔÈ»Êý£»
-- ÕýÕûÊý£ºpositive integer£¬{1£¬2£¬3...}µÈÏòÇ°À©³äµÄÊý³ÆÎªÕýÕûÊý£»
-- ¸ºÕûÊý£º{1£¬2£¬3...}µÈÏòºóÀ©³äµÄÊý³ÆÎª¸¾ÕûÊý£»
-- ÖÐÐÔÊý£º0±»³ÆÎªÖÐÐÔÊý£»
-- ÕûÊý£º integer£¬°ÑÕýÕûÊý¡¢¸ºÕûÊý¡¢ÖÐÐÔÊý(0)ºÏÔÚÒ»Æð½ÐÕûÊý£¬¶Ô£«¡¢£­¡¢¡ÁÔËËã×é³ÉÒ»¸ö·â±ÕµÄÊýÓò¼¯ºÏ£»
-- ÓÐÀíÊý£ºrational number£¬ÕûÊý¶Ô¡Â²»·â±Õ£¬ÓÐÀíÊýÔòÔÚÕûÊý»ù´¡ÉÏ¶Ô¡Â·â±ÕµÄÊýÓò£¬»òÕß¿ÉÒÔ±íÊ¾³ÉÁ½¸öÕûÊýÖ®±È;
-- ÎÞÀíÊý£ºirrational number£¬²»ÄÜ±íÊ¾³É2¸öÕûÊýÖ®±ÈµÄÊý£¬±ÈÈç\(\sqrt{2}\)ºÍÔ²ÖÜÂÊ£»
-- ÊµÊý£ºreal number£¬ÓÐÀíÊýºÍÎÞÀíÊýºÏµ½Ò»Æð³ÆÎªÊµÊý£»
-- ÐéÊý£ºimaginary number£¬·ûºÅÓÃi±íÊ¾£¬i = \(\sqrt{-1}\)£»
-- ¸´Êý£ºcomplex number£¬ÓÉÊµÊýºÍÐéÊý¹¹Ôì³öµÄÊý½Ð¸´Êý£»
-- ÏòÁ¿£ºvector£» 
-- ¾ØÕó£ºmatrix£»
-- ÕÅÁ¿£ºtensor£»
-- Èº£ºgroup£»
-- »·£ºloop£»
-- Óò£ºfield£»
-- ÏßÐÔ´úÊý£ºÑÐ¾¿Î´ÖªÊý¸ü¶àµÄÒ»´Î·½³Ì×é£¬Òý½ø¾ØÕó¡¢ÏòÁ¿¡¢¿Õ¼äµÈ¸ÅÄîÐÎ³ÉµÄ·½Ïò£»
-- ¶àÏîÊ½´úÊý£ºÑÐ¾¿Î´ÖªÊý´ÎÊý¸ü¸ßµÄ¸ß´Î·½³Ì£¬ÐÎ³ÉµÄ·½Ïò£»
-  #+caption: ÊýµÄ¹éÄÉ
+* ä»£æ•°
+** æ¦‚å¿µ
+- è‡ªç„¶æ•°ï¼šnatural numberï¼Œ{0ï¼Œ1ï¼Œ2ï¼Œ3...}ç­‰å…¨ä½“éžè´Ÿæ•´æ•°ç»„æˆçš„æ•°çš„é›†åˆç§°ä¸ºè‡ªç„¶æ•°ï¼›
+- æ­£æ•´æ•°ï¼špositive integerï¼Œ{1ï¼Œ2ï¼Œ3...}ç­‰å‘å‰æ‰©å……çš„æ•°ç§°ä¸ºæ­£æ•´æ•°ï¼›
+- è´Ÿæ•´æ•°ï¼š{1ï¼Œ2ï¼Œ3...}ç­‰å‘åŽæ‰©å……çš„æ•°ç§°ä¸ºå¦‡æ•´æ•°ï¼›
+- ä¸­æ€§æ•°ï¼š0è¢«ç§°ä¸ºä¸­æ€§æ•°ï¼›
+- æ•´æ•°ï¼š integerï¼ŒæŠŠæ­£æ•´æ•°ã€è´Ÿæ•´æ•°ã€ä¸­æ€§æ•°(0)åˆåœ¨ä¸€èµ·å«æ•´æ•°ï¼Œå¯¹ï¼‹ã€ï¼ã€Ã—è¿ç®—ç»„æˆä¸€ä¸ªå°é—­çš„æ•°åŸŸé›†åˆï¼›
+- æœ‰ç†æ•°ï¼šrational numberï¼Œæ•´æ•°å¯¹Ã·ä¸å°é—­ï¼Œæœ‰ç†æ•°åˆ™åœ¨æ•´æ•°åŸºç¡€ä¸Šå¯¹Ã·å°é—­çš„æ•°åŸŸï¼Œæˆ–è€…å¯ä»¥è¡¨ç¤ºæˆä¸¤ä¸ªæ•´æ•°ä¹‹æ¯”;
+- æ— ç†æ•°ï¼širrational numberï¼Œä¸èƒ½è¡¨ç¤ºæˆ2ä¸ªæ•´æ•°ä¹‹æ¯”çš„æ•°ï¼Œæ¯”å¦‚\(\sqrt{2}\)å’Œåœ†å‘¨çŽ‡ï¼›
+- å®žæ•°ï¼šreal numberï¼Œæœ‰ç†æ•°å’Œæ— ç†æ•°åˆåˆ°ä¸€èµ·ç§°ä¸ºå®žæ•°ï¼›
+- è™šæ•°ï¼šimaginary numberï¼Œç¬¦å·ç”¨iè¡¨ç¤ºï¼Œi = \(\sqrt{-1}\)ï¼›
+- å¤æ•°ï¼šcomplex numberï¼Œç”±å®žæ•°å’Œè™šæ•°æž„é€ å‡ºçš„æ•°å«å¤æ•°ï¼›
+- å‘é‡ï¼švectorï¼› 
+- çŸ©é˜µï¼šmatrixï¼›
+- å¼ é‡ï¼štensorï¼›
+- ç¾¤ï¼šgroupï¼›
+- çŽ¯ï¼šloopï¼›
+- åŸŸï¼šfieldï¼›
+- çº¿æ€§ä»£æ•°ï¼šç ”ç©¶æœªçŸ¥æ•°æ›´å¤šçš„ä¸€æ¬¡æ–¹ç¨‹ç»„ï¼Œå¼•è¿›çŸ©é˜µã€å‘é‡ã€ç©ºé—´ç­‰æ¦‚å¿µå½¢æˆçš„æ–¹å‘ï¼›
+- å¤šé¡¹å¼ä»£æ•°ï¼šç ”ç©¶æœªçŸ¥æ•°æ¬¡æ•°æ›´é«˜çš„é«˜æ¬¡æ–¹ç¨‹ï¼Œå½¢æˆçš„æ–¹å‘ï¼›
+  #+caption: æ•°çš„å½’çº³
   #+label: img-number
   #+attr_latex: placement=[H] scale=0.3
   #+begin_src ditaa :file ./img/img-number.png :cmdline -S -E
@@ -48,102 +48,102 @@
                             |
                             +--other(tensor,group,loop,field)
   #+end_src
-** ¶àÏîÊ½
-*** ¸ÅÄî
-- ×î´ó¹«ÒòÊ½£ºÉèf(x), g(x)ÊÇP[x]ÖÐÁ½¸ö¶àÏîÊ½¡£P[x]ÖÐ¶àÏîÊ½d(x)³ÆÎªf(x), g(x)µÄÒ»¸ö×î´ó¹«ÒòÊ½£¬Èç¹ûËüÂú×ã
-  1. d(x)ÊÇf(x)£¬g(x)µÄ¹«ÒòÊ½£»
-  2. f(x)£¬g(x) µÄ¹«ÒòÊ½È«ÊÇd(x)µÄÒòÊ½£»
-- ¶àÏîÊ½»¥ËØ£ºP[x]ÖÐÁ½¸ö¶àÏîÊ½f(x)£¬g(x)³ÆÎª»¥ËØ(»¥ÖÊ)£¬Èç¹û(f(x), g(x))=1;  ((f(x), g(x))±íÊ¾Ê×ÏîÏµÊýÊÇ1µÄ×î´ó¹«ÒòÊ½)£»
-- ÖØÒòÊ½£º²»¿ÉÔ¼¶àÏîÊ½p(x)³ÆÎª¶àÏîÊ½f(x)µÄkÖØÒòÊ½£¬Èç¹û\(p^{k}x | f(x)\)£¬¶ø\(p^{k+1}x ! f(x)\); (g(x)|f(x)±íÊ¾g(x)ÄÜÕû
-  ³ýf(x)) ; 
-- ¶àÏîÊ½Î¢ÉÌ: ¶Ô¶àÏîÊ½Çóµ¼£»
-- ±¾Ô­¶àÏîÊ½£ºÈç¹ûÒ»¸ö·ÇÁãµÄÕûÏµÊý¶àÏîÊ½\(g(x)=b_{n}x^{n}+b_{n-1}x^{n-1}+¡­¡­+b_{0}\) µÄÏµÊý\(b_{n}, b_{n-1}, ¡­¡­£¬b_{0}\)
-  Ã»ÓÐÒìÓÚ¡À1µÄ¹«Òò×Ó£¬Ò²¾ÍËµËüÃÇÊÇ»¥ËØµÄ£¬Õâ¸ö¶àÏîÊ½±»³ÆÎª±¾Ô­¶àÏîÊ½£»
-- ±¾Ô­¶àÏîÊ½¶¨Àí(¸ßË¹ÒýÀí)£ºÁ½¸ö±¾Ô­¶àÏîÊ½µÄ³Ë»ý»¹ÊÇ±¾Ô­¶àÏîÊ½£»
-- ¶Ô³Æ¶àÏîÊ½£ºÉè\(f(x_{1}, x_{2}, ¡­¡­, x_{n})\)ÊÇÊý»·RÉÏÒ»¸önÔª¶àÏîÊ½£¬Èç¹û¶ÔÓÚÕân¸öÎÄ×Ö\(x_{1}, x_{2}, ¡­¡­, x_{n}\)µÄ
-  Ö¸±ê¼¯{1, 2, ¡­¡­, n}Ê©ÐÐÈÎÒâÖÃ»»ºó£¬\(f(x_{1}, x_{2}, ¡­¡­, x_{n})\)¶¼²»¸Ä±ä£¬ÄÇÃ´¾Í³Æ\(f(x_{1}, x_{2}, ¡­¡­, x_{n})\)
-  ÊÇRÉÏÒ»¸önÔª¶Ô³Æ¶àÏîÊ½£»
-*** Âú×ã¶¨ÂÉ
-- ¼Ó·¨½»»»ÂÉ, f(x)+g(x)=g(x)+f(x)£»
-- ¼Ó·¨½áºÏÂÉ, (f(x)+g(x))+h(x) = f(x)+(g(x)+h(x)); 
-- ³Ë·¨½»»»ÂÉ, f(x)g(x)=g(x)f(x); 
-- ³Ë·¨½áºÏÂÉ, (f(x)g(x))h(x)=f(x)(g(x)h(x)); 
-- ³Ë·¨¶Ô¼Ó·¨µÄ·ÖÅäÂÉ, f(x)(g(x)+h(x))=f(x)g(x)+f(x)h(x); 
-- ³Ë·¨ÏûÈ¥ÂÉ, f(x)g(x)=f(x)h(x)ÇÒf(x) \(\neq\) 0, ÄÇÃ´g(x)=h(x);
-- ÈÎºÎn(n>0)´Î¶àÏîÊ½ÔÚ¸´ÊýÓòÖÐÓÐn¸ö¸ù(ÖØ¸ù°´ÖØÊý¼ÆËã)
-*** ¹«Ê½
-- ¶àÏîÊ½³Ë·¨£¬f(x)g(x) = \(\sum_{i=0}^{n}a_{i}x^{i}\) \(\sum_{j=0}^{m}b_{j}x^{j}\) = \(\sum\limits_{s=0}^{m+n}(\sum\limits_{i+j}a_{i}b_{j})x^{s}\)
-- ¶àÏîÊ½Î¢ÉÌ£º
+** å¤šé¡¹å¼
+*** æ¦‚å¿µ
+- æœ€å¤§å…¬å› å¼ï¼šè®¾f(x), g(x)æ˜¯P[x]ä¸­ä¸¤ä¸ªå¤šé¡¹å¼ã€‚P[x]ä¸­å¤šé¡¹å¼d(x)ç§°ä¸ºf(x), g(x)çš„ä¸€ä¸ªæœ€å¤§å…¬å› å¼ï¼Œå¦‚æžœå®ƒæ»¡è¶³
+  1. d(x)æ˜¯f(x)ï¼Œg(x)çš„å…¬å› å¼ï¼›
+  2. f(x)ï¼Œg(x) çš„å…¬å› å¼å…¨æ˜¯d(x)çš„å› å¼ï¼›
+- å¤šé¡¹å¼äº’ç´ ï¼šP[x]ä¸­ä¸¤ä¸ªå¤šé¡¹å¼f(x)ï¼Œg(x)ç§°ä¸ºäº’ç´ (äº’è´¨)ï¼Œå¦‚æžœ(f(x), g(x))=1;  ((f(x), g(x))è¡¨ç¤ºé¦–é¡¹ç³»æ•°æ˜¯1çš„æœ€å¤§å…¬å› å¼)ï¼›
+- é‡å› å¼ï¼šä¸å¯çº¦å¤šé¡¹å¼p(x)ç§°ä¸ºå¤šé¡¹å¼f(x)çš„ké‡å› å¼ï¼Œå¦‚æžœ\(p^{k}x | f(x)\)ï¼Œè€Œ\(p^{k+1}x ! f(x)\); (g(x)|f(x)è¡¨ç¤ºg(x)èƒ½æ•´
+  é™¤f(x)) ; 
+- å¤šé¡¹å¼å¾®å•†: å¯¹å¤šé¡¹å¼æ±‚å¯¼ï¼›
+- æœ¬åŽŸå¤šé¡¹å¼ï¼šå¦‚æžœä¸€ä¸ªéžé›¶çš„æ•´ç³»æ•°å¤šé¡¹å¼\(g(x)=b_{n}x^{n}+b_{n-1}x^{n-1}+â€¦â€¦+b_{0}\) çš„ç³»æ•°\(b_{n}, b_{n-1}, â€¦â€¦ï¼Œb_{0}\)
+  æ²¡æœ‰å¼‚äºŽÂ±1çš„å…¬å› å­ï¼Œä¹Ÿå°±è¯´å®ƒä»¬æ˜¯äº’ç´ çš„ï¼Œè¿™ä¸ªå¤šé¡¹å¼è¢«ç§°ä¸ºæœ¬åŽŸå¤šé¡¹å¼ï¼›
+- æœ¬åŽŸå¤šé¡¹å¼å®šç†(é«˜æ–¯å¼•ç†)ï¼šä¸¤ä¸ªæœ¬åŽŸå¤šé¡¹å¼çš„ä¹˜ç§¯è¿˜æ˜¯æœ¬åŽŸå¤šé¡¹å¼ï¼›
+- å¯¹ç§°å¤šé¡¹å¼ï¼šè®¾\(f(x_{1}, x_{2}, â€¦â€¦, x_{n})\)æ˜¯æ•°çŽ¯Rä¸Šä¸€ä¸ªnå…ƒå¤šé¡¹å¼ï¼Œå¦‚æžœå¯¹äºŽè¿™nä¸ªæ–‡å­—\(x_{1}, x_{2}, â€¦â€¦, x_{n}\)çš„
+  æŒ‡æ ‡é›†{1, 2, â€¦â€¦, n}æ–½è¡Œä»»æ„ç½®æ¢åŽï¼Œ\(f(x_{1}, x_{2}, â€¦â€¦, x_{n})\)éƒ½ä¸æ”¹å˜ï¼Œé‚£ä¹ˆå°±ç§°\(f(x_{1}, x_{2}, â€¦â€¦, x_{n})\)
+  æ˜¯Rä¸Šä¸€ä¸ªnå…ƒå¯¹ç§°å¤šé¡¹å¼ï¼›
+*** æ»¡è¶³å®šå¾‹
+- åŠ æ³•äº¤æ¢å¾‹, f(x)+g(x)=g(x)+f(x)ï¼›
+- åŠ æ³•ç»“åˆå¾‹, (f(x)+g(x))+h(x) = f(x)+(g(x)+h(x)); 
+- ä¹˜æ³•äº¤æ¢å¾‹, f(x)g(x)=g(x)f(x); 
+- ä¹˜æ³•ç»“åˆå¾‹, (f(x)g(x))h(x)=f(x)(g(x)h(x)); 
+- ä¹˜æ³•å¯¹åŠ æ³•çš„åˆ†é…å¾‹, f(x)(g(x)+h(x))=f(x)g(x)+f(x)h(x); 
+- ä¹˜æ³•æ¶ˆåŽ»å¾‹, f(x)g(x)=f(x)h(x)ä¸”f(x) \(\neq\) 0, é‚£ä¹ˆg(x)=h(x);
+- ä»»ä½•n(n>0)æ¬¡å¤šé¡¹å¼åœ¨å¤æ•°åŸŸä¸­æœ‰nä¸ªæ ¹(é‡æ ¹æŒ‰é‡æ•°è®¡ç®—)
+*** å…¬å¼
+- å¤šé¡¹å¼ä¹˜æ³•ï¼Œf(x)g(x) = \(\sum_{i=0}^{n}a_{i}x^{i}\) \(\sum_{j=0}^{m}b_{j}x^{j}\) = \(\sum\limits_{s=0}^{m+n}(\sum\limits_{i+j}a_{i}b_{j})x^{s}\)
+- å¤šé¡¹å¼å¾®å•†ï¼š
   1. (f(x)+g(x))' = f'(x) + g'(x);
   2. (cf(x))' = cf'(x);
   3. (f(x)g(x))' = f'(x)g(x) + f(x)g'(x);
   4. \((f^{m}(x))' = mf^{m-1}(x)f'(x)\)
   
-*** Ó¦ÓÃ
-***** ¶àÏîÊ½ÄâºÏ
-- ¸ÅÄî£º¸ù¾Ý¸ø¶¨µÄm¸öµã£¬²¢²»ÒªÇóÕâÌõÇúÏß¾­¹ýÕâÐ©µã£¬¶øÊÇy=f(x)µÄ½üËÆÇúÏßy=\(\Phi(x)\)£»
-* ¸ÅÂÊ
-** ¸ÅÄî
-- Ñù±¾¿Õ¼ä£ºËæ»úÊÔÑéµÄËùÓÐ¿ÉÄÜ½á¹û×é³ÉµÄ¼¯ºÏ;
-- Ëæ»ú±äÁ¿£º´ò°Ð´òÈëXY×ø±êÏµ£¬´òÈëµÄÎ»ÖÃÊÇ¸ö¶þÎ¬Ëæ»ú±äÁ¿(x, y), Ëæ»ú±äÁ¿²»ÊÇÒ»¸ö¸ÅÂÊ;Ëæ»ú±äÁ¿·ÖÎª£º
-  1. ÀëÉ¢Ëæ»ú±äÁ¿£ºÖ»ÄÜÈ¡ÓÐÏÞ¸öÖµ£¬ËäÈ»¿ÉÒÔÊÇÎÞÇî¶àµÄ£¬µ«ÊÇÊÇÀëÉ¢»¯µÄ£»
-  2. Á¬ÐøÐÍËæ»ú±äÁ¿£º¿ÉÒÔÈ¡ÎÞÇî¶àµÄÁ¬ÐøÖµ£»
-- ¸ÅÂÊº¯Êý£º¶ÔÓÚËæ»ú±äÁ¿XµÄ¸ÅÂÊ½Ð¸ÅÂÊº¯Êý: $$ p_{i} = P(X = a_{i}), i = 1,...,n $$ 
-- ¸ÅÂÊ·Ö²¼£º¸ÅÂÊº¯Êý¸ø³öÁËÈ«²¿¸ÅÂÊ1ÊÇÈçºÎÔÚÆä¿ÉÄÜÖµÖ®¼ä·ÖÅäµÄ,  _ÆäÊµ¿ÉÒÔ½«¸ÅÂÊ·Ö²¼ºÍ¸ÅÂÊº¯ÊýµÈÍ¬ÈÏÊ¶_ £»
-- ·Ö²¼º¯Êý£º _¿ÉÒÔÈÏÎªÊÇ¸ÅÂÊº¯ÊýÔÚÇø¼ä¶ÎµÄÇóºÍ_ , ÉèXÎªÒ»Ëæ»ú±äÁ¿£¬Ôò·Ö²¼º¯ÊýÎª $$P(X \leq x) = F(x), -\infty < x < \infty$$   
-- ¸ÅÂÊÃÜ¶Èº¯Êý£ºÈç¹û¶ÔÓÚËæ»ú±äÁ¿XµÄ·Ö²¼º¯ÊýF(x),´æÔÚ·Ç¸º¿É»ýº¯Êýf(x)£¬Ê¹¶ÔÓÚÈÎÒâÊµÊýxÓÐ 
-  $$F(x) = \int_{\infty}^{x}f(t)dt $$ Ôòf(x)³ÆÎªXµÄ¸ÅÂÊÃÜ¶Èº¯Êý£¬¼ò³Æ¸ÅÂÊÃÜ¶È, Ö»ÓÐÔÚxµã´¦Á¬Ðø£¬²ÅÓÐf(x)=F'(x)£» 
-- µÈ¿ÉÄÜ¸ÅÐÍÖÐÊÂ¼þAµÄ¼ÆËã¹«Ê½£º $$P(A) = \sum_{j=1}^{k}P({e_{i_{j}}})=\frac{k}{n}=\frac{A°üº¬µÄ»ù±¾ÊÂ¼þÊý}{SÖÐ»ù±¾ÊÂ¼þµÄ×ÜÊý} $$
-- Ìõ¼þ¸ÅÂÊ£ºÊÂ¼þAÒÑ¾­·¢ÉúµÄÌõ¼þÏÂ£¬ÊÂ¼þB·¢ÉúµÄ¸ÅÂÊ£¬±íÊ¾Îª$$P(B|A)=\frac{P(AB)}{P(A)}$$
-- »¥³âÊ±¼äºÍµÄ¸ÅÂÊ£ºµÈÓÚ¸÷ÊÂ¼þ¸ÅÂÊµÄºÍ£º $P(A_{1}+A_{2}+...+A_{n}) = P(A_{1})+P(A_{2})+...+P(A_{n})$
-- ¶ÔÁ¢ÊÂ¼þAµÄ¸ÅÂÊ£º$P(\overline{A}) = 1 - P(A)$
-- ¶ÀÁ¢ÊÂ¼þµÄ¸ÅÂÊ£ºÈô¸É¸ö¶ÀÁ¢ÊÂ¼þ $A_{1},...,A_{n}$ Ö®»ýµÄ¸ÅÂÊ£¬µÈÓÚ¸÷ÊÂ¼þ¸ÅÂÊµÄ³Ë»ý£º$P(A_{1}...A_{n}) = P(A_{1})...P(A_{n})$
-- È«¸ÅÂÊ£ºÆäÒâÒåÔÚÓÚÔÚÐ£¸´ÔÓµÄÇé¿öÏÂÖ±½Ó¼ÆËãAÊÂ¼þ¸ÅÂÊP(A)²»ÈÝÒ×£¬µ«ÊÇAÊÂ¼þ×ÜÊÇËæÄ³¸öB_i·¢Éú£¬ÔòÊÊµ±È¥¹¹ÔìÕâ×éB_i¿ÉÒÔ¼ò»¯
-  ¼ÆËã¡£Æä¹«Ê½ÈçÏÂ£¬ÆäÖÐÓÃµ½ÁËÌõ¼þ¸ÅÂÊ¹«Ê½, ´Ë¹«Ê½»¹ÄÜ´ÓÁíÒ»¸ö½Ç¶ÈÈ¥Àí½â£¬°ÑB_i¿´×öµ¼ÖÂÊÂ¼þA·¢ÉúµÄÒ»ÖÖ¿ÉÄÜÍ¾¾¶£¬¶Ô²»Í¬Í¾
-  ¾¶£¬A·¢ÉúµÄ¸ÅÂÊ¼´Ìõ¼þ¸ÅÂÊP(A|B)¸÷²»Í¬£¬¶ø²ÉÈ¡ÄÄ¸öÍ¾¾¶È´ÊÇËæ»úµÄ¡£ 
+*** åº”ç”¨
+***** å¤šé¡¹å¼æ‹Ÿåˆ
+- æ¦‚å¿µï¼šæ ¹æ®ç»™å®šçš„mä¸ªç‚¹ï¼Œå¹¶ä¸è¦æ±‚è¿™æ¡æ›²çº¿ç»è¿‡è¿™äº›ç‚¹ï¼Œè€Œæ˜¯y=f(x)çš„è¿‘ä¼¼æ›²çº¿y=\(\Phi(x)\)ï¼›
+* æ¦‚çŽ‡
+** æ¦‚å¿µ
+- æ ·æœ¬ç©ºé—´ï¼šéšæœºè¯•éªŒçš„æ‰€æœ‰å¯èƒ½ç»“æžœç»„æˆçš„é›†åˆ;
+- éšæœºå˜é‡ï¼šæ‰“é¶æ‰“å…¥XYåæ ‡ç³»ï¼Œæ‰“å…¥çš„ä½ç½®æ˜¯ä¸ªäºŒç»´éšæœºå˜é‡(x, y), éšæœºå˜é‡ä¸æ˜¯ä¸€ä¸ªæ¦‚çŽ‡;éšæœºå˜é‡åˆ†ä¸ºï¼š
+  1. ç¦»æ•£éšæœºå˜é‡ï¼šåªèƒ½å–æœ‰é™ä¸ªå€¼ï¼Œè™½ç„¶å¯ä»¥æ˜¯æ— ç©·å¤šçš„ï¼Œä½†æ˜¯æ˜¯ç¦»æ•£åŒ–çš„ï¼›
+  2. è¿žç»­åž‹éšæœºå˜é‡ï¼šå¯ä»¥å–æ— ç©·å¤šçš„è¿žç»­å€¼ï¼›
+- æ¦‚çŽ‡å‡½æ•°ï¼šå¯¹äºŽéšæœºå˜é‡Xçš„æ¦‚çŽ‡å«æ¦‚çŽ‡å‡½æ•°: $$ p_{i} = P(X = a_{i}), i = 1,...,n $$ 
+- æ¦‚çŽ‡åˆ†å¸ƒï¼šæ¦‚çŽ‡å‡½æ•°ç»™å‡ºäº†å…¨éƒ¨æ¦‚çŽ‡1æ˜¯å¦‚ä½•åœ¨å…¶å¯èƒ½å€¼ä¹‹é—´åˆ†é…çš„,  _å…¶å®žå¯ä»¥å°†æ¦‚çŽ‡åˆ†å¸ƒå’Œæ¦‚çŽ‡å‡½æ•°ç­‰åŒè®¤è¯†_ ï¼›
+- åˆ†å¸ƒå‡½æ•°ï¼š _å¯ä»¥è®¤ä¸ºæ˜¯æ¦‚çŽ‡å‡½æ•°åœ¨åŒºé—´æ®µçš„æ±‚å’Œ_ , è®¾Xä¸ºä¸€éšæœºå˜é‡ï¼Œåˆ™åˆ†å¸ƒå‡½æ•°ä¸º $$P(X \leq x) = F(x), -\infty < x < \infty$$   
+- æ¦‚çŽ‡å¯†åº¦å‡½æ•°ï¼šå¦‚æžœå¯¹äºŽéšæœºå˜é‡Xçš„åˆ†å¸ƒå‡½æ•°F(x),å­˜åœ¨éžè´Ÿå¯ç§¯å‡½æ•°f(x)ï¼Œä½¿å¯¹äºŽä»»æ„å®žæ•°xæœ‰ 
+  $$F(x) = \int_{\infty}^{x}f(t)dt $$ åˆ™f(x)ç§°ä¸ºXçš„æ¦‚çŽ‡å¯†åº¦å‡½æ•°ï¼Œç®€ç§°æ¦‚çŽ‡å¯†åº¦, åªæœ‰åœ¨xç‚¹å¤„è¿žç»­ï¼Œæ‰æœ‰f(x)=F'(x)ï¼› 
+- ç­‰å¯èƒ½æ¦‚åž‹ä¸­äº‹ä»¶Açš„è®¡ç®—å…¬å¼ï¼š $$P(A) = \sum_{j=1}^{k}P({e_{i_{j}}})=\frac{k}{n}=\frac{AåŒ…å«çš„åŸºæœ¬äº‹ä»¶æ•°}{Sä¸­åŸºæœ¬äº‹ä»¶çš„æ€»æ•°} $$
+- æ¡ä»¶æ¦‚çŽ‡ï¼šäº‹ä»¶Aå·²ç»å‘ç”Ÿçš„æ¡ä»¶ä¸‹ï¼Œäº‹ä»¶Bå‘ç”Ÿçš„æ¦‚çŽ‡ï¼Œè¡¨ç¤ºä¸º$$P(B|A)=\frac{P(AB)}{P(A)}$$
+- äº’æ–¥æ—¶é—´å’Œçš„æ¦‚çŽ‡ï¼šç­‰äºŽå„äº‹ä»¶æ¦‚çŽ‡çš„å’Œï¼š $P(A_{1}+A_{2}+...+A_{n}) = P(A_{1})+P(A_{2})+...+P(A_{n})$
+- å¯¹ç«‹äº‹ä»¶Açš„æ¦‚çŽ‡ï¼š$P(\overline{A}) = 1 - P(A)$
+- ç‹¬ç«‹äº‹ä»¶çš„æ¦‚çŽ‡ï¼šè‹¥å¹²ä¸ªç‹¬ç«‹äº‹ä»¶ $A_{1},...,A_{n}$ ä¹‹ç§¯çš„æ¦‚çŽ‡ï¼Œç­‰äºŽå„äº‹ä»¶æ¦‚çŽ‡çš„ä¹˜ç§¯ï¼š$P(A_{1}...A_{n}) = P(A_{1})...P(A_{n})$
+- å…¨æ¦‚çŽ‡ï¼šå…¶æ„ä¹‰åœ¨äºŽåœ¨æ ¡å¤æ‚çš„æƒ…å†µä¸‹ç›´æŽ¥è®¡ç®—Aäº‹ä»¶æ¦‚çŽ‡P(A)ä¸å®¹æ˜“ï¼Œä½†æ˜¯Aäº‹ä»¶æ€»æ˜¯éšæŸä¸ªB_iå‘ç”Ÿï¼Œåˆ™é€‚å½“åŽ»æž„é€ è¿™ç»„B_iå¯ä»¥ç®€åŒ–
+  è®¡ç®—ã€‚å…¶å…¬å¼å¦‚ä¸‹ï¼Œå…¶ä¸­ç”¨åˆ°äº†æ¡ä»¶æ¦‚çŽ‡å…¬å¼, æ­¤å…¬å¼è¿˜èƒ½ä»Žå¦ä¸€ä¸ªè§’åº¦åŽ»ç†è§£ï¼ŒæŠŠB_içœ‹åšå¯¼è‡´äº‹ä»¶Aå‘ç”Ÿçš„ä¸€ç§å¯èƒ½é€”å¾„ï¼Œå¯¹ä¸åŒé€”
+  å¾„ï¼ŒAå‘ç”Ÿçš„æ¦‚çŽ‡å³æ¡ä»¶æ¦‚çŽ‡P(A|B)å„ä¸åŒï¼Œè€Œé‡‡å–å“ªä¸ªé€”å¾„å´æ˜¯éšæœºçš„ã€‚ 
   $$ P(A)=P(AB_{1})+...+P(AB_{n}) = P(B_{1})P(A|B_{1})+...+P(B_{n})P(A|B_{n}) $$
-- ±´Ò¶Ë¹¹«Ê½£º¿Ì»­ÁËÒ»Ð©ÊÂ¼þB_iÆäÔ­ÓÐ·¢Éú¸ÅÂÊÔÚÊÂ¼þAÒýÈëµÄÌõ¼þÏÂB_iµÄ¸ÅÂÊ·¢ÉúÁË¸Ä±ä£»Èç¹û°ÑÊÂ¼þA¿´³É½á¹û£¬°ÑÖîÊÂ¼þB_i¿´
-  ³Éµ¼ÖÂ½á¹ûAµÄ¿ÉÄÜÔ­Òò£¬ÔòÈ«¸ÅÂÊ¹«Ê½¿ÉÒÔ¿´×öÎª¡°ÓÉÔ­ÒòÍÆ½á¹û¡±£¬¶ø±´Ò¶Ë¹¹«Ê½ÔòÏà·´Îª¡°ÓÉ½á¹ûÍÆÔ­Òò¡±£¬ÏÖÔÚÓÐ½á¹ûAÒÑ¾­·¢
-  ÉúÁË£¬ÔÚÖÚ¶àÔ­ÒòB_iÖÐµ½µ×ÓÉÄÄ¸öµ¼ÖÂ£¬±´Ò¶Ë¹¹«Ê½¿ÉÒÔ¸ø³ö¶ÈÁ¿£¬ÀàËÆÓÚ·¢ÉúÁËÄ³¸ö°¸¼þA£¬ÔÚ²»ÁË½â°¸ÇéÇ°£¬ÏÓÒÉÈËB_i¸ù¾ÝÒÔÍù
-  µÄ¼ÇÂ¼Æä×÷°¸µÄ¸ÅÂÊÎªP(B_i)£¬µ«ÊÇÈç¹ûÁË½âÁËA°¸Çé£¬ÔòP(B_i)¾Í»á±ä¶¯ÁË£»±´Ò¶Ë¹¹«Ê½ÈçÏÂ£ºÔÚÈ«¸ÅÂÊ¼Ù¶¨ÏÂÓÐ   
+- è´å¶æ–¯å…¬å¼ï¼šåˆ»ç”»äº†ä¸€äº›äº‹ä»¶B_iå…¶åŽŸæœ‰å‘ç”Ÿæ¦‚çŽ‡åœ¨äº‹ä»¶Aå¼•å…¥çš„æ¡ä»¶ä¸‹B_içš„æ¦‚çŽ‡å‘ç”Ÿäº†æ”¹å˜ï¼›å¦‚æžœæŠŠäº‹ä»¶Açœ‹æˆç»“æžœï¼ŒæŠŠè¯¸äº‹ä»¶B_içœ‹
+  æˆå¯¼è‡´ç»“æžœAçš„å¯èƒ½åŽŸå› ï¼Œåˆ™å…¨æ¦‚çŽ‡å…¬å¼å¯ä»¥çœ‹åšä¸ºâ€œç”±åŽŸå› æŽ¨ç»“æžœâ€ï¼Œè€Œè´å¶æ–¯å…¬å¼åˆ™ç›¸åä¸ºâ€œç”±ç»“æžœæŽ¨åŽŸå› â€ï¼ŒçŽ°åœ¨æœ‰ç»“æžœAå·²ç»å‘
+  ç”Ÿäº†ï¼Œåœ¨ä¼—å¤šåŽŸå› B_iä¸­åˆ°åº•ç”±å“ªä¸ªå¯¼è‡´ï¼Œè´å¶æ–¯å…¬å¼å¯ä»¥ç»™å‡ºåº¦é‡ï¼Œç±»ä¼¼äºŽå‘ç”Ÿäº†æŸä¸ªæ¡ˆä»¶Aï¼Œåœ¨ä¸äº†è§£æ¡ˆæƒ…å‰ï¼Œå«Œç–‘äººB_iæ ¹æ®ä»¥å¾€
+  çš„è®°å½•å…¶ä½œæ¡ˆçš„æ¦‚çŽ‡ä¸ºP(B_i)ï¼Œä½†æ˜¯å¦‚æžœäº†è§£äº†Aæ¡ˆæƒ…ï¼Œåˆ™P(B_i)å°±ä¼šå˜åŠ¨äº†ï¼›è´å¶æ–¯å…¬å¼å¦‚ä¸‹ï¼šåœ¨å…¨æ¦‚çŽ‡å‡å®šä¸‹æœ‰   
   $$P(B|A) = \frac{P(AB_{i})}{P(A)} = \frac{P(B_{i})P(A|B_{i})}{\sum_{j}P(B_{j})P(A|B_{j})}$$
 - 
 
-** ÅÅÁÐ×éºÏ
-- ÅÅÁÐ£ºn¸öÏàÒìÊÂÎïÈ¡r¸ö(1<=r<=n)µÄ²»Í¬ÅÅÁÐ×ÜÊý£¬Îª$P_{r}^{n} = n(n-1)(n-2)...(n-r+1)$ , Èç¹ûr=n£¬Ôò$P_{r}^{r} = r!$
-- ×éºÏ£ºn¸öÏàÒìÎï¼þÈ¡r¸ö(1<=r<=n)µÄ²»Í¬×éºÏ×ÜÊý£¬Îª$C_{r}^{n}=\frac{P_{r}^{n}}{r!}=\frac{n!}{r!(n-r)!}}$
+** æŽ’åˆ—ç»„åˆ
+- æŽ’åˆ—ï¼šnä¸ªç›¸å¼‚äº‹ç‰©å–rä¸ª(1<=r<=n)çš„ä¸åŒæŽ’åˆ—æ€»æ•°ï¼Œä¸º$P_{r}^{n} = n(n-1)(n-2)...(n-r+1)$ , å¦‚æžœr=nï¼Œåˆ™$P_{r}^{r} = r!$
+- ç»„åˆï¼šnä¸ªç›¸å¼‚ç‰©ä»¶å–rä¸ª(1<=r<=n)çš„ä¸åŒç»„åˆæ€»æ•°ï¼Œä¸º$C_{r}^{n}=\frac{P_{r}^{n}}{r!}=\frac{n!}{r!(n-r)!}}$
 - 0!=1; 
-* ¸ÅÂÊ·Ö²¼
-** ÀëÉ¢·Ö²¼
-*** 01·Ö²¼
-Ëæ»ú±äÁ¿XÖ»ÄÜÈ¡0ºÍ1Á½¸öÖµ£¬È¡0ºÍ1µÄ¸ÅÂÊ·Ö²¼ÊÇp£¬q£¬p+q=1
-*** ¶þÏî·Ö²¼
-- ¶¨Òå£º·þ´Ó¶þÏî·Ö²¼µÄËæ»ú±äÁ¿X±íÊ¾ÔÚn¸ö¶ÀÁ¢µÄÊÇ/·ÇÊÔÑéÖÐ³É¹¦µÄ´ÎÊýi£¬ÆäÖÐÃ¿´ÎÊÔÑéµÄ³É¹¦¸ÅÂÊÎªp
+* æ¦‚çŽ‡åˆ†å¸ƒ
+** ç¦»æ•£åˆ†å¸ƒ
+*** 01åˆ†å¸ƒ
+éšæœºå˜é‡Xåªèƒ½å–0å’Œ1ä¸¤ä¸ªå€¼ï¼Œå–0å’Œ1çš„æ¦‚çŽ‡åˆ†å¸ƒæ˜¯pï¼Œqï¼Œp+q=1
+*** äºŒé¡¹åˆ†å¸ƒ
+- å®šä¹‰ï¼šæœä»ŽäºŒé¡¹åˆ†å¸ƒçš„éšæœºå˜é‡Xè¡¨ç¤ºåœ¨nä¸ªç‹¬ç«‹çš„æ˜¯/éžè¯•éªŒä¸­æˆåŠŸçš„æ¬¡æ•°iï¼Œå…¶ä¸­æ¯æ¬¡è¯•éªŒçš„æˆåŠŸæ¦‚çŽ‡ä¸ºp
   $$ p_{i} = C_{n}^{i}p^{i}(1-p)^{n-i},i=0, 1, ..., n $$
-**** pythonÊµÏÖ
+**** pythonå®žçŽ°
 #+begin_src python
-from scipy import stats         #µ¹Èë¹¤¾ß°ü
+from scipy import stats         #å€’å…¥å·¥å…·åŒ…
 import numpy as np
 import matplotlib.pyplot as plt
 # ...........................
-n = 20                          #¶¨ÒåÊÔÑé´ÎÊý
-p = 0.3                         #¶¨ÒåÃ¿´ÎÊÂ¼þµÄ¸ÅÂÊ
-k = np.arange(21)               #Ä£Äâ¶à´ÎÊÔÑé£¬ÊÂ¼þ·¢ÉúµÄËùÓÐ´ÎÊý
-binomial = stats.binom.pmf(k, n, p) #¼ÆËãÃ¿¸ö´ÎÊýµÄ¸ÅÂÊ
+n = 20                          #å®šä¹‰è¯•éªŒæ¬¡æ•°
+p = 0.3                         #å®šä¹‰æ¯æ¬¡äº‹ä»¶çš„æ¦‚çŽ‡
+k = np.arange(21)               #æ¨¡æ‹Ÿå¤šæ¬¡è¯•éªŒï¼Œäº‹ä»¶å‘ç”Ÿçš„æ‰€æœ‰æ¬¡æ•°
+binomial = stats.binom.pmf(k, n, p) #è®¡ç®—æ¯ä¸ªæ¬¡æ•°çš„æ¦‚çŽ‡
 # ...........................
-plt.plot(k, binomial, 'o-')     #½«Ã¿¸ö´ÎÊýµÄ¸ÅÂÊÍ¨¹ýÍ¼ÐÎ±íÊ¾³öÀ´
-plt.title('binomial:n=%i, p=%.2f' %(n,p)) #ÉèÖÃ±êÌâ
-plt.xlabel('k times')           #xÖáÊÇ´ÎÊý
-plt.ylabel('probability of k')  #yÖáÊÇk´ÎµÄ¸ÅÂÊ
-plt.show()                      #ÏÔÊ¾³öÀ´
+plt.plot(k, binomial, 'o-')     #å°†æ¯ä¸ªæ¬¡æ•°çš„æ¦‚çŽ‡é€šè¿‡å›¾å½¢è¡¨ç¤ºå‡ºæ¥
+plt.title('binomial:n=%i, p=%.2f' %(n,p)) #è®¾ç½®æ ‡é¢˜
+plt.xlabel('k times')           #xè½´æ˜¯æ¬¡æ•°
+plt.ylabel('probability of k')  #yè½´æ˜¯kæ¬¡çš„æ¦‚çŽ‡
+plt.show()                      #æ˜¾ç¤ºå‡ºæ¥
 #+end_src
 
-*** ²®Å¬Àû·Ö²¼
-*** ²´ËÉ·Ö²¼
-*** ¼¸ºÎ·Ö²¼
-** Á¬Ðø·Ö²¼
-*** ÕýÌ«·Ö²¼
-*** Ö¸Êý·Ö²¼
-*** \beta·Ö²¼
+*** ä¼¯åŠªåˆ©åˆ†å¸ƒ
+*** æ³Šæ¾åˆ†å¸ƒ
+*** å‡ ä½•åˆ†å¸ƒ
+** è¿žç»­åˆ†å¸ƒ
+*** æ­£å¤ªåˆ†å¸ƒ
+*** æŒ‡æ•°åˆ†å¸ƒ
+*** \betaåˆ†å¸ƒ
   
 
